--- a/ᏙᏯ.mw
+++ b/ᏙᏯ.mw
@@ -20,58 +20,59 @@
 
 '''ᏙᏯ''' ᎠᎴ ᏴᎩ-aquatic [[rodent]] ᎾᏰᎯᏯ [[North America|ᏧᏴᏢ ᎠᎹᏰᎵ]] ᎠᎴ [[Europe|ᏳᎳᏛ]].  ᎤᏅᏌ ᎠᎴ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᎠᎴᏂᏙᎲ ᎠᏁᎳ ᎯᎠ [[family (biology)|ᏏᏓᏁᎸᎯ]] [[Castoridae]], ᎦᏙ ᎤᏍᏗ ᎢᎦᎢ ᎨᏐ ᏏᏴᏫ [[genus|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], '''''ᎫᏢᎥᏍᎬ'''''. [[genetics|ᎠᏛᎯᏍᏙᏗ]] [[research|ᏅᎠᏯᏍᏗ]] ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ ᎯᎠ European ᎠᎴ ᎤᏴᏢ ᏴᏩᏁᎬ ᏙᏯ ᎾᏂᎥ ᏴᏫ ᎾᏍᏋ ᎤᏤᎵᏛ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎠᎴ Ꮎ hybridization ᎨᏒᎢ ᎧᏁᏍᎦ.
 
-ᏙᏯ ᎠᎴ ᎣᎯᏍᏗ ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᏫᏚᏳᎪᏛ ᎠᏓᏁᎸ [[dam|ᎠᏓᎦᏴᎵᎨ]]ᎭᏫᎾᏗᏢ [[river|ᎤᏪᏴ]]ᎠᎴ [[stream|ᎤᏪᏴᎢ]], ᎠᎴ ᎠᏓᏁᎸ ᎤᎾᏤᎵ ᏚᏁᏅᏒ (aka [[lodge|ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ]]) ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏩᎫᏗᏗᏒ ᏗᏟᎶᏍᏔᏅ [[pond|ᎥᏓᎵ]].  ᎤᏅᏌ ᎠᎴ ᎯᎠ ᏔᎵᏁ ᎤᏔᏂᎢᏍᏗ rodents, ᎤᎶᏐᏅ ᎯᎠ [[capybara]]. ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᎵᏍᏙᏯᏙᏗ ᎪᏍᏓᏯ [[fangs|ᏓᎳᏏᏛ]] Ꮎ ᎠᏠᏯᏍᏗ ᎯᎳᎪ ᎢᏳ cornered.
+ᏙᏯ ᎠᎴ ᎣᎯᏍᏗ ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᏫᏚᏳᎪᏛ ᎠᏓᏁᎸ [[dam|ᎠᏓᎦᏴᎵᎨ]]ᎭᏫᎾᏗᏢ [[river|ᎤᏪᏴ]] ᎠᎴ [[stream|ᎤᏪᏴᎢ]], ᎠᎴ ᎠᏓᏁᎸ ᎤᎾᏤᎵ ᏚᏁᏅᏒ (aka [[lodge|ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ]]) ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏩᎫᏗᏗᏒ ᏗᏟᎶᏍᏔᏅ [[pond|ᎥᏓᎵ]].  ᎤᏅᏌ ᎠᎴ ᎯᎠ ᏔᎵᏁ ᎤᏔᏂᎢᏍᏗ rodents, ᎤᎶᏐᏅ ᎯᎠ [[capybara]]. ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᎵᏍᏙᏯᏙᏗ ᎪᏍᏓᏯ [[fangs|ᏓᎳᏏᏛ]] Ꮎ ᎠᏠᏯᏍᏗ ᎯᎳᎪ ᎢᏳ cornered.
 
-ᏙᏯ ᎬᎵᏱᎵᏒ ᎠᏛᏍᎬ ᏂᎦᏅᎯᏒ ᎥᎴᏂᏙᎲ. ᎤᏔᎾ [[specimen|ᎪᏣᎴᏛ ᏗᎪᎥᎯ]]ᎦᏛᏍᎬᎢ ᎦᏬᎯᎸᏙᏗ 25 [[kilogram|kg]] (55 ᏄᏓᎨᏒ) ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᎦᏘᎴᎬ. ᎠᎨᏴ ᎠᎴ ᏥᏄᏍᏗ ᎡᏆ ᏥᏄᏍᏗ ᎠᎴ ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎠᏍᎦᏯ ᎯᎠ ᎤᏠᏱ ᎢᏳᏕᏘᏴᏓ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏓᎦᏘᎴᎬ ᏄᎾᏛᏅ [[mammal]].
+ᏙᏯ ᎬᎵᏱᎵᏒ ᎠᏛᏍᎬ ᏂᎦᏅᎯᏒ ᎥᎴᏂᏙᎲ. ᎤᏔᎾ [[specimen|ᎪᏣᎴᏛ ᏗᎪᎥᎯ]] ᎦᏛᏍᎬᎢ ᎦᏬᎯᎸᏙᏗ 25 [[kilogram|kg]] (55 ᏄᏓᎨᏒ) ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᎦᏘᎴᎬ. ᎠᎨᏴ ᎠᎴ ᏥᏄᏍᏗ ᎡᏆ ᏥᏄᏍᏗ ᎠᎴ ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎠᏍᎦᏯ ᎯᎠ ᎤᏠᏱ ᎢᏳᏕᏘᏴᏓ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏓᎦᏘᎴᎬ ᏄᎾᏛᏅ [[mammal]].
 
 == ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ==
 [[File:Biberschaedel-drawing.jpg|thumb| ᏙᏯ [[skull|ᎣᏓᏅᏛ]]]]
-[[File:Biber_2_db.jpg|thumb|right|250px|ᏙᏯ ᎭᏫᎾᏗᏢ Ontario, [[Canada|ᎧᎾᏓ]] ᎯᎠ [[European Beaver|European ᏙᏯ]] (''ᎫᏢᎥᏍᎬ ᎠᏍᏗ ᎪᏢᏔᏅ'') ᏥᏄᏍᏛᎩ hunted ᎾᎥᏂᎨᏍᏗ [[extinction|ᎠᎧᎵᏏᏐᏗ]] ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]], ᎢᏧᎳ ᎾᏍᎩᎾᎢ [[fur|ᎤᏭᏯᏔᏅ]], ᎠᎴ ᎾᏍᎩᎾᎢ ''[[castoreum]]'', [[secretion|ᏗᏓᏲᎯᏍᏗ]] Ꮝ [[scent gland|ᎦᏩᏒᎬ gland]] ᎤᏬᎯᏳᏅ ᎤᎭ [[medicine|ᎠᏅᏬᏗ]] properties.  ᏱᏂᎬᏛᎾ, ᎯᎠ ᏙᏯ ᎨᏒᎢ ᎾᏊ ᎠᎴᏂᏙᎲ re-ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᏂᎦᏅᎯᏒ [[Europe|ᏳᎳᏛ]]. ᎯᎸᏍᎩ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎠᎴᏂᏓᏍᏗ ᎾᎿ ᎯᎠ [[Elbe]], ᎯᎠ [[Rhone River|Rhone]] ᎠᎴ ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[Scandinavia]]. ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎧᎸᎬ ᎢᏗᏢ [[Poland]] ᎾᎿᎢ ᎨᏒᎢ ᎣᏍᏛ ᎢᏳᏅᏁᎯ ᎾᎥ ᏄᎾᏓᎸ ''ᎫᏢᎥᏍᎬ ᎠᏍᏗ ᎪᏢᏔᏅ''. ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ [[reintroduction|reintroduced]] ᎭᏫᎾᏗᏢ [[Bavaria]] ᎠᎴ [[The Netherlands|ᎯᎠ Netherlands]] ᎠᎴ ᎠᎴ ᏫᏚᏳᎪᏛ ᎠᏰᏍᏛᏗ ᎢᏤ ᎦᎷᎯᏍᏗ. ᎯᎠ ᏙᏯ ᏭᎵᏍᏆᏛ ᎠᏓᏁᏟᏴᏍᏗ ᎠᎧᎵᏏᏐᏗ ᎭᏫᎾᏗᏢ [[Great Britain|ᎡᏆ Britain]] ᎭᏫᎾᏗᏢ ᎯᎠ [[sixteenth century|ᏓᎳᏚᏏᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]]: [[Giraldus Cambrensis]] ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎭᏫᎾᏗᏢ 1188 (''Itinerarium'' ᎧᏬᎳᏕᏍᎬ.ᎪᎷᏩᏛᏗ) Ꮎ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᏍᏋ ᎠᏩᏛᏗ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[Teifi]] ᎭᏫᎾᏗᏢ [[Wales]] ᎠᎴ ᎭᏫᎾᏗᏢ ᏌᏊ ᎤᏪᏴ ᎭᏫᎾᏗᏢ [[Scotland]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᏤᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎴ ᏰᎵ ᏧᎸᏌᏓ [[first hand|ᎢᎬᏱ ᎤᏬᏰᏂ]]. 
+[[File:Biber_2_db.jpg|thumb|right|250px|ᏙᏯ ᎭᏫᎾᏗᏢ Ontario, [[Canada|ᎧᎾᏓ]] ᎯᎠ [[European Beaver|European ᏙᏯ]] (''ᎫᏢᎥᏍᎬ ᎠᏍᏗ ᎪᏢᏔᏅ'') ᏥᏄᏍᏛᎩ hunted ᎾᎥᏂᎨᏍᏗ [[extinction|ᎠᎧᎵᏏᏐᏗ]] ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]], ᎢᏧᎳ ᎾᏍᎩᎾᎢ [[fur|ᎤᏭᏯᏔᏅ]], ᎠᎴ ᎾᏍᎩᎾᎢ ''[[castoreum]]'', [[secretion|ᏗᏓᏲᎯᏍᏗ]] Ꮝ [[scent gland|ᎦᏩᏒᎬ gland]] ᎤᏬᎯᏳᏅ ᎤᎭ [[medicine|ᎠᏅᏬᏗ]] properties.  ᏱᏂᎬᏛᎾ, ᎯᎠ ᏙᏯ ᎨᏒᎢ ᎾᏊ ᎠᎴᏂᏙᎲ re-ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᏂᎦᏅᎯᏒ [[Europe|ᏳᎳᏛ]]. ᎯᎸᏍᎩ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎠᎴᏂᏓᏍᏗ ᎾᎿ ᎯᎠ [[Elbe]], ᎯᎠ [[Rhone River|Rhone]] ᎠᎴ ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[Scandinavia]]. ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎧᎸᎬ ᎢᏗᏢ [[Poland]] ᎾᎿᎢ ᎨᏒᎢ ᎣᏍᏛ ᎢᏳᏅᏁᎯ ᎾᎥ ᏄᎾᏓᎸ ''ᎫᏢᎥᏍᎬ ᎠᏍᏗ ᎪᏢᏔᏅ''. ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ [[reintroduction|reintroduced]] ᎭᏫᎾᏗᏢ [[Bavaria]] ᎠᎴ [[The Netherlands|ᎯᎠ Netherlands]] ᎠᎴ ᎠᎴ ᏫᏚᏳᎪᏛ ᎠᏰᏍᏛᏗ ᎢᏤ ᎦᎷᎯᏍᏗ. ᎯᎠ ᏙᏯ ᏭᎵᏍᏆᏛ ᎠᏓᏁᏟᏴᏍᏗ ᎠᎧᎵᏏᏐᏗ ᎭᏫᎾᏗᏢ [[Great Britain|ᎡᎵᏏᎯ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[sixteenth century|ᏓᎳᏚᏏᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]]: [[Giraldus Cambrensis]] ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎭᏫᎾᏗᏢ 1188 (''Itinerarium'' ᎧᏬᎳᏕᏍᎬ.ᎪᎷᏩᏛᏗ) Ꮎ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᏍᏋ ᎠᏩᏛᏗ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[Teifi]] ᎭᏫᎾᏗᏢ [[Wales]] ᎠᎴ ᎭᏫᎾᏗᏢ ᏌᏊ ᎤᏪᏴ ᎭᏫᎾᏗᏢ [[Scotland]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᏤᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎴ ᏰᎵ ᏧᎸᏌᏓ [[first hand|ᎢᎬᏱ ᎤᏬᏰᏂ]]. 
 
-ᎭᏫᎾᏗᏢ ᏚᏂᏃᏗ 2005, ᏑᏓᎵ European ᏙᏯ ᎨᏒᎩ re-ᎬᏂᎨᏒ ᏄᏩᏁᎸ Britain ᎭᏫᎾᏗᏢ ᎡᎳᏗᎨ ᏍᏙᏍᎩᏱ ᏧᎬᏩᎶᏗ ᎭᏫᎾᏗᏢ [[Gloucestershire]], ᎠᎴ ᎾᎿᎢ ᎠᎴ ᏗᏟᎶᏍᏙᏗ ᎾᏍᎩᎾᎢ re-ᎾᏛᏁᎸ ᎭᏫᎾᏗᏢ [[Scotland]] ᎠᎴ [[Wales]].<ref>http://www.msn.ᎢᏗᎦᏘᎭ.uk/htx/returnofthebeaver/</ref>
+ᎭᏫᎾᏗᏢ ᏚᏂᏃᏗ 2005, ᏑᏓᎵ European ᏙᏯ ᎨᏒᎩ re-ᎬᏂᎨᏒ ᏄᏩᏁᎸ [[Britain|ᎡᎵᏏᎯ]] ᎭᏫᎾᏗᏢ ᎡᎳᏗᎨ ᏍᏙᏍᎩᏱ ᏧᎬᏩᎶᏗ ᎭᏫᎾᏗᏢ [[Gloucestershire]], ᎠᎴ ᎾᎿᎢ ᎠᎴ ᏗᏟᎶᏍᏙᏗ ᎾᏍᎩᎾᎢ re-ᎾᏛᏁᎸ ᎭᏫᎾᏗᏢ [[Scotland]] ᎠᎴ [[Wales]].<ref>http://www.msn.ᎢᏗᎦᏘᎭ.uk/htx/returnofthebeaver/</ref>
 
 ᎯᎠ ᎠᎧᎵᏏᏐᏗ ᎤᏴᏢ ᏴᏩᏁᎬ [[Giant beaver|ᏂᎬᎢ ᏙᏯ]] (''Castoroides ohioensis'') ᏥᏄᏍᏛᎩ ᏌᏊ ᎤᏔᏂᎢᏍᏗ rodents Ꮎ ᎢᏳᏊ [[evolution|ᏚᏙᎳᏩᏛᎲ]]. ᎾᏍᎩ disappeared, ᎬᏙᏗ ᏐᎢ ᎡᏆ ᎦᏂᏝᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[Holocene extinction event|Holocene ᎠᎧᎵᏏᏐᏗ ᏂᎦᎵᏍᏔᏂᏙᎲ]], ᎬᏩᏚᏫᏛ 10,000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ.
 
 == ᏗᎦᎶᎪᏗ ==
-[[File:Beaver pho34.jpg|thumb|right|250px|ᏙᏯ ᎭᏫᎾᏗᏢ Norway]] ᎯᎠ ᏗᎦᎶᎪᏗ ᎯᎠ ᏙᏯ ᎨᏒᎢ ᎯᎠ [[riparian zone|ᎦᏙᎯ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]] ᎠᏠᏯᏍᏙᏗ ᎤᏪᏴᎢ ᎦᏂᏟ.  ᎯᎠ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎯᎠ ᏙᏯ ᎾᏍᎩᎾᎢ ᎢᏯᏍᎪᎯᏧᏈ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᎯᎠ [[Northern Hemisphere|ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]] ᎤᎭ ᏭᏪᏙᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎾᏍᎩ ᎯᎠ ᎠᎹ iyahdvnelidasdi nvwatohiyadv ᎠᎴ ᎭᏫᎾᏗᏢ ᎣᏍᏛ ᎪᏢᎯᏐᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᏴᏫ ᎾᎿ, ᎥᎪᏩᏘᏍᎬ ᏂᎦᏛ ᎯᎠ downed ᏕᏡᎬ, ᎾᏍᎩ ᏄᎵᏂᎬᎬ ᏱᏓᏟᎶᏍᏔᏅ ᎢᎦᏰᎵᏍᏗ Ꮎ ᎯᎠ ᎠᏫᏗᏍᎩ ᎠᎴ ᎾᎾᏛᏁᎲ ᎣᏍᏛ ᎯᎠ ᎠᎿᏗᏢ.  ᏙᏯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ [[keystone species|ᎠᎵᏍᏕᎸᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎭᏫᎾᏗᏢ [[ecosystem]] ᎾᎥᎢ creating [[wetlands]] Ꮎ ᎠᎴ utilized ᎾᎥᎢ ᎤᎪᏗᏗ ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᎯᎠ ᏅᏏᎾᏒ ᏙᏯ ᏂᎬᎢ ᎠᏓᏁᏟᏴᏍᎩ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎨᏒᎢ amazing.  ᏐᎢ ᎠᏂᏴᏫ, Ꮭ ᏐᎢ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎦᏂᏝᎢ ᎾᏛᏁ ᎤᏟ ᎢᎦᎢ ᎤᏙᏢᏒᎢ Ꮝ ᎦᏙᎯ ᏄᏍᏗᏓᏅ.  ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎡᏍᎦᏂ ᏄᏠᏯᏍᏛᎾ Ꮝ ᏂᎬᏩᏍᏛ predators, ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ [[Tierra del Fuego]], ᏙᏯ ᎤᎭ flooded ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎢᏧᏟᎶᏛ ᎦᏙᎯ ᎠᎴ ᎠᎴ ᎠᎦᏎᏍᏔᏅ unstoppable ᎤᏢᎢᏍᏗᏍᎬ.
+[[File:Beaver pho34.jpg|thumb|right|250px|ᏙᏯ ᎭᏫᎾᏗᏢ Norway]] ᎯᎠ ᏗᎦᎶᎪᏗ ᎯᎠ ᏙᏯ ᎨᏒᎢ ᎯᎠ [[riparian zone|ᎦᏙᎯ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]] ᎠᏠᏯᏍᏙᏗ ᎤᏪᏴᎢ ᎦᏂᏟ.  ᎯᎠ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎯᎠ ᏙᏯ ᎾᏍᎩᎾᎢ ᎢᏯᏍᎪᎯᏧᏈ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᎯᎠ [[Northern Hemisphere|ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]] ᎤᎭ ᏭᏪᏙᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎾᏍᎩ ᎯᎠ ᎠᎹ [[system|ᎢᏯᏛᏁᎵᏓᏍᏗ]] ᏅᏩᏙᎯᏯᏛ ᎠᎴ ᎭᏫᎾᏗᏢ ᎣᏍᏛ ᎪᏢᎯᏐᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᏴᏫ ᎾᎿ, ᎥᎪᏩᏘᏍᎬ ᏂᎦᏛ ᎯᎠ downed ᏕᏡᎬ, ᎾᏍᎩ ᏄᎵᏂᎬᎬ ᏱᏓᏟᎶᏍᏔᏅ ᎢᎦᏰᎵᏍᏗ Ꮎ ᎯᎠ ᎠᏫᏗᏍᎩ ᎠᎴ ᎾᎾᏛᏁᎲ ᎣᏍᏛ ᎯᎠ ᎠᎿᏗᏢ.  ᏙᏯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ [[keystone species|ᎠᎵᏍᏕᎸᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎭᏫᎾᏗᏢ [[ecosystem]] ᎾᎥᎢ creating [[wetlands]] Ꮎ ᎠᎴ utilized ᎾᎥᎢ ᎤᎪᏗᏗ ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᎯᎠ ᏅᏏᎾᏒ ᏙᏯ ᏂᎬᎢ ᎠᏓᏁᏟᏴᏍᎩ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎨᏒᎢ amazing.  ᏐᎢ ᎠᏂᏴᏫ, Ꮭ ᏐᎢ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎦᏂᏝᎢ ᎾᏛᏁ ᎤᏟ ᎢᎦᎢ ᎤᏙᏢᏒᎢ Ꮝ ᎦᏙᎯ ᏄᏍᏗᏓᏅ.  ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎡᏍᎦᏂ ᏄᏠᏯᏍᏛᎾ Ꮝ ᏂᎬᏩᏍᏛ predators, ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ [[Tierra del Fuego]], ᏙᏯ ᎤᎭ flooded ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎢᏧᏟᎶᏛ ᎦᏙᎯ ᎠᎴ ᎠᎴ ᎠᎦᏎᏍᏔᏅ unstoppable ᎤᏢᎢᏍᏗᏍᎬ.
 
 === ᎠᏓᎦᏴᎵᎨ ===
-ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᎴ ᎪᏢᏅᎯ ᎢᏧᎳ ᏥᏄᏍᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏗᎦᏘᎴᎩ predators, e.g., ᏩᏯ, ᎠᏂᏩᏯ ᎠᎴ ᎯᎸᏍᎩ ᏲᏅ, ᎠᎴ ᎠᏓᏁᎳᏁᏗ ᏩᎾᎯᎨᏍᏙᏗ ᎦᎷᎯᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎾᎯᏳᎨᏒ ᎪᎳ. ᎾᏍᎩ ᎨᏒᎢ ᎢᏧᎳ ᎯᎠ ᎤᏃᏴᎬ ᎠᎹ ᎭᏫᎾᏗᏢ ᎠᏌᎳᏙᏗ ᎠᎴ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ Ꮎ ᏄᎵᏂᎬᎬ ᎯᎠ ᏙᏯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ. ᎢᏳᏃ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎦᏅᎾᏩ ᎨᏒᎢ nanahwunvgi ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᏟᏴᏍᏗ ᎾᏍᎩ ᎯᎠ ᏙᏯ ᎠᎾᏍᎬᏘ ᎦᎶᏗ ᎾᏍᎩ ᎬᏙᏗ ᏡᎬ ᎧᏁᏌᎢ ᏄᏍᏗᏓᏅ ᎯᎠ ᎦᏅᎾᏩ ᎠᏓᎴᏂᏍᎬ ᎨᏒᎢ ᎤᏓᏍᏕᎸᎲ ᎬᏙᏗ ᎡᏆ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ-ᎾᏍᎩᏯᎢ ᎢᏳᏍᏗ ᎧᏃᎮᏗ. ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎪᏢᎯᏐᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᏲᏨᎯ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᎴ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎾᏍᎩ ᎦᎸᎳᏗᎨᏍᏙᏗ ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᏥᏄᏍᏗ ᎯᎠ ᎤᏃᏴᎬ ᏫᎬᎵᏱᎴᎩ. ᏱᏂᎬᏛᎾ, ᎭᏫᎾᏗᏢ ᎢᏧᏩᎪᏗ ᎦᎸᎳᏗ ᎠᎹ, ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎠᎵᏍᎪᎸᏙᏗ spillways ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᏕᏴᎠᏍᎬ ᏄᏚᏓᎸᎾ. ᏙᏯ ᎤᎭ ᎢᏧᎳᎭ ᎠᏁᎳᏛᏅ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎠᏓᎦᏴᎵᎨ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ ᏗᏟᎶᏍᏔᏅ ᎠᎹ ᎦᏛᎢ ᎢᏧᎳᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᏅᏙᎲᏅ ᎠᎹ.
+ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᎴ ᎪᏢᏅᎯ ᎢᏧᎳ ᏥᏄᏍᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏗᎦᏘᎴᎩ predators, e.g., ᏩᏯ, ᎠᏂᏩᏯ ᎠᎴ ᎯᎸᏍᎩ ᏲᏅ, ᎠᎴ ᎠᏓᏁᎳᏁᏗ ᏩᎾᎯᎨᏍᏙᏗ ᎦᎷᎯᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎾᎯᏳᎨᏒ ᎪᎳ. ᎾᏍᎩ ᎨᏒᎢ ᎢᏧᎳ ᎯᎠ ᎤᏃᏴᎬ ᎠᎹ ᎭᏫᎾᏗᏢ ᎠᏌᎳᏙᏗ ᎠᎴ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ Ꮎ ᏄᎵᏂᎬᎬ ᎯᎠ ᏙᏯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ. ᎢᏳᏃ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎦᏅᎾᏩ ᎨᏒᎢ ᎾᎿᏭᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᏟᏴᏍᏗ ᎾᏍᎩ ᎯᎠ ᏙᏯ ᎠᎾᏍᎬᏘ ᎦᎶᏗ ᎾᏍᎩ ᎬᏙᏗ ᏡᎬ ᎧᏁᏌᎢ ᏄᏍᏗᏓᏅ ᎯᎠ ᎦᏅᎾᏩ ᎠᏓᎴᏂᏍᎬ ᎨᏒᎢ ᎤᏓᏍᏕᎸᎲ ᎬᏙᏗ ᎡᏆ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ-ᎾᏍᎩᏯᎢ ᎢᏳᏍᏗ ᎧᏃᎮᏗ. ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎪᏢᎯᏐᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᏲᏨᎯ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᎴ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎾᏍᎩ ᎦᎸᎳᏗᎨᏍᏙᏗ ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᏥᏄᏍᏗ ᎯᎠ ᎤᏃᏴᎬ ᏫᎬᎵᏱᎴᎩ. ᏱᏂᎬᏛᎾ, ᎭᏫᎾᏗᏢ ᎢᏧᏩᎪᏗ ᎦᎸᎳᏗ ᎠᎹ, ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎠᎵᏍᎪᎸᏙᏗ spillways ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᏕᏴᎠᏍᎬ ᏄᏚᏓᎸᎾ. ᏙᏯ ᎤᎭ ᎢᏧᎳᎭ ᎠᏁᎳᏛᏅ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎠᏓᎦᏴᎵᎨ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ ᏗᏟᎶᏍᏔᏅ ᎠᎹ ᎦᏛᎢ ᎢᏧᎳᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᏅᏙᎲᏅ ᎠᎹ.
 
-ᎤᏲᏨᎯ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᏄᏠᏯᏍᏛᎾ ᎠᏂᎲᏍᎬ ᎯᎠ ᏙᏯ ᎠᎩᏍᎪᎢ ᎠᏟᎶᎥ ᎦᏙᎯ ᎠᏁᎸᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎢᏳᏃ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎨᏒᎢ ᎨᎢ lyadvnehi ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ. ᏙᏯ ᏰᎵᏇ ᏅᎪᏢᎯᏐᏗᏱ ᏯᏛᎿ ᎢᎬᏱ ᎠᎴᏅᏗ ᎠᏓᎦᏴᎵᎨ ᏑᏒᎯᏓ, ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏥᏍᏕᎵ ᎠᏂᎦᏲᎵ ᎠᏓᎦᏴᎵᎨ ᏥᏄᏍᏗ ᏄᎵᏂᎬᎬ.
+ᎤᏲᏨᎯ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᏄᏠᏯᏍᏛᎾ ᎠᏂᎲᏍᎬ ᎯᎠ ᏙᏯ ᎠᎩᏍᎪᎢ ᎠᏟᎶᎥ ᎦᏙᎯ ᎠᏁᎸᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎢᏳᏃ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎨᏒᎢ ᎨᎢ ᎢᏯᏛᏁᎯ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ. ᏙᏯ ᏰᎵᏇ ᏅᎪᏢᎯᏐᏗᏱ ᏯᏛᎿ ᎢᎬᏱ ᎠᎴᏅᏗ ᎠᏓᎦᏴᎵᎨ ᏑᏒᎯᏓ, ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏥᏍᏕᎵ ᎠᏂᎦᏲᎵ ᎠᏓᎦᏴᎵᎨ ᏥᏄᏍᏗ ᏄᎵᏂᎬᎬ.
 
-[[File:Beaver signs.JPG|250px|left|thumb|ᏕᏡᎬ, ᎦᎸᎳᏗᏢ  250 mm (10 ᎭᏫᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, felled ᎾᎥᎢ ᏙᏯ ᎭᏫᎾᏗᏢ ᏌᏊ ᏒᏃᏱ.]] ᎾᏞᎬ ᏗᎦᏎᏍᏙᏗ involving ᏙᏯ ᏗᏍᏆᎸᏙᏗ activities ᎤᎭ ᎤᏓᏎᎮᎸ Ꮎ ᏙᏯ ᎠᎾᏍᎬᏘ ᎦᏬᎯᎵᏴᏍᏗ ᎠᏓᏅᏍᏗ stimuli, ᎾᏍᎩ ᏂᎨᏒᎾ ᎣᏍᏛ ᎯᎠ ᎤᏃᏴᎬ ᎠᏓᏟᏒᎢ ᎠᎹ. ᎭᏫᎾᏗᏢ ᏔᎵ ᎠᎦᏛᏗ ᏄᏍᏛ Wilson (1971) ᎠᎴ Richard (1967, 1980) ᎠᏓᏃᎮᏗ Ꮎ ᎾᏍᎩ ᎤᏁᎳᎩ ᏙᏯ ᏫᎵ ᎦᏒᏛ ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᏍᏚᏗ loudspeaker ᏗᏓᏲᎯᏍᏗ ᏚᏃᏴᎬ ᎠᎹ ᎠᏓᏟᏒᎢ, ᎤᏅᏌ ᎾᏍᎩ ᎤᏩᏒ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎶᏐᏅ ᎤᎪᏗ ᎠᎴᏫᏍᏙᏗ ᎢᏳᏩᎪᏗ. ᏗᎦᏟᏌᏅᎯ ᎯᎠ ᏙᏯ, ᎯᎳᎪ ᎢᏳ ᎠᏤᎯᏐᏗᏱ ᎬᏙᏗ ᎦᏅᎾᏩ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᎠᎦᏛᎴᎯᏍᏗ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ ᎠᏓᎦᏴᎵᎨ, ᏭᎵᏱᎶᎸ ᎤᎴᏫᏍᏔᏅ ᎯᎠ ᎠᏕᏴᎠᏍᎬ ᎠᎹ ᎾᎥᎢ plugging ᎯᎠ ᎦᏅᎾᏩ ᎬᏙᏗ tlawotu ᎠᎴ ᎦᎾᏍᏓ. ᎯᎠ ᏙᏯ ᎨᏒᎩ ᎠᎦᏎᏍᏔᏅ ᎿᏛᎦ ᎪᎯ ᎢᏧᎳᎭ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎦᏅᎾᏩ ᎧᏁᏉᏛ ᎯᎸᏍᎩ ᎠᏎᎯᎯ upstream ᎠᎴ ᎾᎥᏂᎨ ᎯᎠ ᎭᏫᏂ ᎯᎠ ᎤᏪᏴᎢ ᎠᎴ ᎯᎠ ᎢᏴ ᎠᏛᎯᏍᏔᏅ Ꮭ ᎤᏃᏴᎬ ᎠᏓᏟᏒᎢ ᎠᎹ.
+[[File:Beaver signs.JPG|250px|left|thumb|ᏕᏡᎬ, ᎦᎸᎳᏗᏢ  250 mm (10 ᎭᏫᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, felled ᎾᎥᎢ ᏙᏯ ᎭᏫᎾᏗᏢ ᏌᏊ ᏒᏃᏱ.]] ᎾᏞᎬ ᏗᎦᏎᏍᏙᏗ involving ᏙᏯ ᏗᏍᏆᎸᏙᏗ activities ᎤᎭ ᎤᏓᏎᎮᎸ Ꮎ ᏙᏯ ᎠᎾᏍᎬᏘ ᎦᏬᎯᎵᏴᏍᏗ ᎠᏓᏅᏍᏗ stimuli, ᎾᏍᎩ ᏂᎨᏒᎾ ᎣᏍᏛ ᎯᎠ ᎤᏃᏴᎬ ᎠᏓᏟᏒᎢ ᎠᎹ. ᎭᏫᎾᏗᏢ ᏔᎵ ᎠᎦᏛᏗ ᏄᏍᏛ Wilson (1971) ᎠᎴ Richard (1967, 1980) ᎠᏓᏃᎮᏗ Ꮎ ᎾᏍᎩ ᎤᏁᎳᎩ ᏙᏯ ᏫᎵ ᎦᏒᏛ ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᏍᏚᏗ loudspeaker ᏗᏓᏲᎯᏍᏗ ᏚᏃᏴᎬ ᎠᎹ ᎠᏓᏟᏒᎢ, ᎤᏅᏌ ᎾᏍᎩ ᎤᏩᏒ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎶᏐᏅ ᎤᎪᏗ ᎠᎴᏫᏍᏙᏗ ᎢᏳᏩᎪᏗ. ᏗᎦᏟᏌᏅᎯ ᎯᎠ ᏙᏯ, ᎯᎳᎪ ᎢᏳ ᎠᏤᎯᏐᏗᏱ ᎬᏙᏗ ᎦᏅᎾᏩ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᎠᎦᏛᎴᎯᏍᏗ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ ᎠᏓᎦᏴᎵᎨ, ᏭᎵᏱᎶᎸ ᎤᎴᏫᏍᏔᏅ ᎯᎠ ᎠᏕᏴᎠᏍᎬ ᎠᎹ ᎾᎥᎢ plugging ᎯᎠ ᎦᏅᎾᏩ ᎬᏙᏗ ᏝᏬᏚ ᎠᎴ ᎦᎾᏍᏓ. ᎯᎠ ᏙᏯ ᎨᏒᎩ ᎠᎦᏎᏍᏔᏅ ᎿᏛᎦ ᎪᎯ ᎢᏧᎳᎭ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎦᏅᎾᏩ ᎧᏁᏉᏛ ᎯᎸᏍᎩ ᎠᏎᎯᎯ upstream ᎠᎴ ᎾᎥᏂᎨ ᎯᎠ ᎭᏫᏂ ᎯᎠ ᎤᏪᏴᎢ ᎠᎴ ᎯᎠ ᎢᏴ ᎠᏛᎯᏍᏔᏅ Ꮭ ᎤᏃᏴᎬ ᎠᏓᏟᏒᎢ ᎠᎹ.
 
 ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᏰᎵᏇ ᎾᏍᏋ disruptive; ᎯᎠ ᎦᏃᎱᎩᏍᎬ ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ ᎤᏁᏉᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎤᏲᏨᎯ, ᎠᎴ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎦᏃᎱᎩᏍᎬ ᏄᎵᏍᏔᏅ ᏐᎢ ᏔᎷᎩᏍᎩ ᏅᏃᎯ roadbed, ᎾᏍᎩ ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ derailments ᎾᎥᎢ ᎥᎬᏍᏉᏍᎬ-ᎠᏥᏄᏉᏫᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏔᏏᏅᏱ, ᎠᎴ ᎯᎳᎪ ᎢᏳ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎤᏣᎷᏘᏓ ᎠᎴ ᎯᎠ ᏄᎵᏍᏔᏅ ᎤᏥᏍᏓᎷᎩᏍᎬ ᎦᏃᎱᎩᏍᎬ ᎤᏲᏨᎯ ᎤᎶᎯᏍᏗ. ᎪᎯ ᎠᎽᏰᎵ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏩᏎᎸᎯ ᏴᏫ ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ; ᏙᏯ ᏰᎵᏇ ᎠᏲᏍᏙᏗ ᎤᏁᏍᎩᎸᏒ ᏗᎦᎶᎪᏗ ᎾᏍᎩᎾᎢ ᎦᏂᏰᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᎴ ᎢᏳᏓᎵᎭ ᎠᏲᏍᏙᏗ ᎤᏩᎾᏒ ᎤᏛᏒ ᏕᏡᎬ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎤᎭ Ꮭ ᎬᏙᏗ.
 
 ᎩᎳ ᎠᏓᎦᏴᎵᎨ ᎠᏓᏁᎸ ᎠᎵᏂᎬᏁᏗᎢ ᏅᎠᏓᏁᏗ wetlands, ᎯᎠ ᎦᏙᎯ ᎤᏤᎵ ᎤᎪᏗᏗ ᎠᎵᏍᏕᎸᏙᏗ ecosystem.  ᏯᏛᎿ wetland ᎤᎭᎵᏍᏕᎸᏙᏗ ᎠᏠᏯᏍᏛ ᎦᏃᎱᎩᏍᎬ ᎠᎨᏔᏗᏍᏗ ᎨᎢ, biodiversity (ᎾᎥᎢ ᎠᎾᏓᏁᎳᏍᎬ ᏗᎦᎶᎪᏗ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᎢᏳᏓᎵᎭ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ), ᎠᎴ ᎠᎹ ᏕᎦᏅᎦᎵᏍᎬ, ᎢᏧᎳ ᎾᎥᎢ ᎯᎠ ᎤᏄᎸᎲᏍᎩ toxins ᏯᏛᎿ ᏥᏄᏍᏗ pesticides ᎠᎴ ᎯᎠ ᎠᏅᏓᏗᏍᏗ ᎦᎳᏅᎯ ᎾᎥᎢ ᏙᏯ ᎠᏓᎦᏴᎵᎨ. ᎯᎠ ᎣᏂᏯᎨ ᎾᏍᎩ ᎾᏍᏇ ᎠᎦᏲᎳᏅ ᎠᏲᎶᎬ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎠᎦᏲᎳᏗᏍᏗ turbidity Ꮎ ᎨᏒᎢ ᎯᎠ ᎠᏎᎸᎯ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎾᏍᎩᎾᎢ aquatic ᎥᎴᏂᏙᎲ.
-[[File:Beaverlodge.JPG|thumb|right|250px|ᏙᏯ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ, approx. 20 ᎤᎳᏏᏕᎾ ᎠᏰᎵ ᎠᏍᏓᏅᏅ. [[Ontario, ᎧᎾᏓ]]]]  
 
+[[File:Beaverlodge.JPG|thumb|right|250px|ᏙᏯ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ, approx. 20 ᎤᎳᏏᏕᎾ ᎠᏰᎵ ᎠᏍᏓᏅᏅ. Ontario, ᎧᎾᏓ]]  
 ᎯᎠ ᏙᏯ ᎤᏤᎵ ᏄᎵᏍᏔᏅ ᎾᎿ ᎯᎠ ᏄᏍᏗᏓᏅ ᎠᎾᎩᏍᏗ ᎤᏗᏗᏢ ᎦᏙ ᎤᏍᏗ ᏂᎯ ᏯᏓᎢᏗᏏ utugi gvdi ᏒᏙᏂ, ᏧᎧᏅᏍᏕᎾ ᎠᏫ ᎪᏍᏓᏱ rodent.  ᎯᎠ ᎢᎬᏱ ᎢᎦᏛ ᎤᏤᎵ ᎾᏓᏛᏂᏌᏁᎲ ᎨᏒᎢ ᎤᏒᏂᎸ ᎯᎳᎪ ᎢᏳ ᎤᏤᎵ ᎠᏓᎦᏴᎵᎨ ᎪᏢᏗ ᎥᏓᎵ.
 
-'''ᎦᏃᎱᎩᏍᎬ ᎠᎨᏔᏗᏍᏗ'''
+===ᎦᏃᎱᎩᏍᎬ ᎠᎨᏔᏗᏍᏗ===
 
-ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎤᎭ ᎤᏙᎯᏳ ᎢᎦᎢ ᎨᏒ ᎠᏎᏊᎢ ᏒᏓᎷᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎳᎪ ᎢᏳ ᎦᎨᏛ ᏗᎦᏍᎩ ᏄᎵᏍᏔᏅ, ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎧᎵᎢ ᎦᎸᎳᏗᏢ ᎠᎴ ᎦᏂᎸ ᎠᏱᎸᏓ ᏣᏥᏲᎯᏍᏗ ᎯᎠ ᎤᏤᎵᏛ ᎠᏓᎾᏅ ᎠᎹ.  ᎢᏳᏓᎵᎭ ᎪᎯ ᎨᏒᎢ ᏂᎦᏛ Ꮎ ᎨᏒᎢ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏂᎦᏛᎢ ᎯᎠ ᎦᏃᎱᎩᏍᎬ ᏓᏍᏟᏁᎦ ᎠᏓᏅ ᎡᎳᏗ ᎯᎠ ᎤᏪᏴ ᎠᎴ ᏫᎵ ᎠᎦᏲᎳᏅ ᎠᎴ ᎪᏣᎴᏍᏗᏱ ᎤᏲᏨᎯ ᏴᏫ ᎠᏛᎯᏍᏙᏗ.  ᎠᎴ ᎦᏃᎱᎩᏍᎬ ᎠᎨᏔᏗᏍᏗ ᎨᏒᎢ achieved ᎭᏫᎾᏗᏢ ᏐᎢ ᏫᎦᎶᎯᏍᏗ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.  ᎯᎠ ᎦᏚᎢ ᎤᏪᏴᎢ ᏗᎦᎾᏗᏫᏍᏗ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᎠᎹ ᎦᏍᎩᎶ.  ᎾᎥᎢ ᎠᎾᏛᎯᏍᏗᏍᎬ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎤᏪᏴᎢ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎡᏍᎦᏂ, ᎯᎠ ᎠᎷᏚᎧᏘ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᎹ ᎦᏍᎩᎶ ᎨᏒᎢ ᎠᎦᏲᎳᏛᎯ ᎠᎴ ᎠᎹ ᎾᎥᎢ ᎯᎠ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎠᏕᏴᎠᏍᎬ ᎤᏟ ᎢᎦᎢ ᎷᏍᎦᏃᎵ ᎾᎾᎯ ᎯᎠ ᎤᏪᏴᎢ.  ᎪᎯ ᎢᏳᎵᏍᏙᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᏧᎾᎵᏍᏕᎸᏗ ᎠᎦᏲᎳᏅ ᎦᏃᎱᎩᏍᎬ ᎠᎺᏉᎯ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᏉᎠ ᎯᎠ ᎠᎹ ᎠᏕᏴᎠᏍᎬ ᎯᎳᎪ ᎢᏳ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎠᎦᏍᎬ.  ᎯᎠ ᏐᎢ ᎦᎶᎯᏍᏗ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎤᏩᎾᏕᏍᎩ ᎠᏥᏄᏉᏫᏍᎬ ᎠᎹ ᎠᏕᏴᎠᏍᎬ ᎨᏒᎢ ᎾᎥᎢ kanquotsegi ᎯᎠ wetted ᎡᏍᎦᏂ ᎯᎠ ᎤᏪᏴᎢ.  ᎪᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎤᏟ ᎢᎦᎢ ᎠᎹ seep ᎾᎾᎯ ᎯᎠ underlying ᎦᏙᎯ ᎭᏢᏃ Ꮝ ᎠᏕᏴᎠᏍᎬ ᎨᏒᎢ slowed ᎡᎳᏗ.  ᎪᎯ ᎠᎹ ᏭᎵᏱᎶᎸ ᎠᏩᏛᏓ Ꮝ ᎦᎶᎯᏍᏗ ᎦᏐᎯ ᎯᎠ ᎤᏪᏴᎢ.  ᎤᏪᏴ ᎬᏙᏗ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎠᏍᎪᎵ ᎠᎹᏱ ᎤᎭ ᎡᎳᏗᎨ ᎦᎸᎳᏗ ᎠᎹ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎡᎳᏗ ᎠᎹ.[[File:Broken_Beaver_Dam.jpg|thumb|right|250px|ᎠᏚᎳᏗ ᏙᏯ ᎠᏓᎦᏴᎵᎨ. [[Allegheny State Park, New York|Allegheny ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎢᏤ York]]]]
+ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎤᎭ ᎤᏙᎯᏳ ᎢᎦᎢ ᎨᏒ ᎠᏎᏊᎢ ᏒᏓᎷᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎳᎪ ᎢᏳ ᎦᎨᏛ ᏗᎦᏍᎩ ᏄᎵᏍᏔᏅ, ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎧᎵᎢ ᎦᎸᎳᏗᏢ ᎠᎴ ᎦᏂᎸ ᎠᏱᎸᏓ ᏣᏥᏲᎯᏍᏗ ᎯᎠ ᎤᏤᎵᏛ ᎠᏓᎾᏅ ᎠᎹ.  ᎢᏳᏓᎵᎭ ᎪᎯ ᎨᏒᎢ ᏂᎦᏛ Ꮎ ᎨᏒᎢ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏂᎦᏛᎢ ᎯᎠ ᎦᏃᎱᎩᏍᎬ ᏓᏍᏟᏁᎦ ᎠᏓᏅ ᎡᎳᏗ ᎯᎠ ᎤᏪᏴ ᎠᎴ ᏫᎵ ᎠᎦᏲᎳᏅ ᎠᎴ ᎪᏣᎴᏍᏗᏱ ᎤᏲᏨᎯ ᏴᏫ ᎠᏛᎯᏍᏙᏗ.  ᎠᎴ ᎦᏃᎱᎩᏍᎬ ᎠᎨᏔᏗᏍᏗ ᎨᏒᎢ achieved ᎭᏫᎾᏗᏢ ᏐᎢ ᏫᎦᎶᎯᏍᏗ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.  ᎯᎠ ᎦᏚᎢ ᎤᏪᏴᎢ ᏗᎦᎾᏗᏫᏍᏗ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᎠᎹ ᎦᏍᎩᎶ.  ᎾᎥᎢ ᎠᎾᏛᎯᏍᏗᏍᎬ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎤᏪᏴᎢ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎡᏍᎦᏂ, ᎯᎠ ᎠᎷᏚᎧᏘ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᎹ ᎦᏍᎩᎶ ᎨᏒᎢ ᎠᎦᏲᎳᏛᎯ ᎠᎴ ᎠᎹ ᎾᎥᎢ ᎯᎠ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎠᏕᏴᎠᏍᎬ ᎤᏟ ᎢᎦᎢ ᎷᏍᎦᏃᎵ ᎾᎾᎯ ᎯᎠ ᎤᏪᏴᎢ.  ᎪᎯ ᎢᏳᎵᏍᏙᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᏧᎾᎵᏍᏕᎸᏗ ᎠᎦᏲᎳᏅ ᎦᏃᎱᎩᏍᎬ ᎠᎺᏉᎯ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᏉᎠ ᎯᎠ ᎠᎹ ᎠᏕᏴᎠᏍᎬ ᎯᎳᎪ ᎢᏳ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎠᎦᏍᎬ.  ᎯᎠ ᏐᎢ ᎦᎶᎯᏍᏗ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎤᏩᎾᏕᏍᎩ ᎠᏥᏄᏉᏫᏍᎬ ᎠᎹ ᎠᏕᏴᎠᏍᎬ ᎨᏒᎢ ᎾᎥᎢ ᎧᏁᏉᏤᎩ ᎯᎠ wetted ᎡᏍᎦᏂ ᎯᎠ ᎤᏪᏴᎢ.  ᎪᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎤᏟ ᎢᎦᎢ ᎠᎹ seep ᎾᎾᎯ ᎯᎠ underlying ᎦᏙᎯ ᎭᏢᏃ Ꮝ ᎠᏕᏴᎠᏍᎬ ᎨᏒᎢ slowed ᎡᎳᏗ.  ᎪᎯ ᎠᎹ ᏭᎵᏱᎶᎸ ᎠᏩᏛᏓ Ꮝ ᎦᎶᎯᏍᏗ ᎦᏐᎯ ᎯᎠ ᎤᏪᏴᎢ.  ᎤᏪᏴ ᎬᏙᏗ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎠᏍᎪᎵ ᎠᎹᏱ ᎤᎭ ᎡᎳᏗᎨ ᎦᎸᎳᏗ ᎠᎹ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎡᎳᏗ ᎠᎹ.
 
-'''Wetland ᏗᏁᏝᎾ'''
+[[File:Broken_Beaver_Dam.jpg|thumb|right|250px|ᎠᏚᎳᏗ ᏙᏯ ᎠᏓᎦᏴᎵᎨ. Allegheny ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᏄᏯᎩ]]
+===Wetland ᏗᏁᏝᎾ===
 
 ᎢᏳᏃ ᏙᏯ ᎥᏓᎵ ᏗᏙᎳᎩ ᎦᏟᏐᏗᎩ ᎤᏅᏬᏓ ᎤᏍᏆᎸᎲ ᎯᎠ settling ᎠᏥᏄᏉᏫᏍᎬ ᎦᎳᏅᎯ ᎠᎴ ᎢᏳᏃ ᎯᎠ ᏡᎬ ᎠᏓᏁᏗ ᏓᏍᏆᎶᏗ ᎠᏥᏄᏉᏫᏍᎬ ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ, ᎯᎠ ᏙᏯ ᏫᎵ ᏗᏲᎯᏍᏗ ᎯᎠ ᏄᏍᏗᏓᏅ.  ᏭᎵᏱᎶᎸ ᎯᎠ ᎠᏓᎦᏴᎵᎨ, ᏄᏠᏯᏍᏛᎾ ᎯᎠ ᏙᏯ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎾᏍᎩ, ᏫᎵ ᎾᏍᏋ breached ᎠᎴ ᎯᎠ ᎠᎹ ᏫᎵ ᎠᏟᏴᏍᏗ ᎠᏥᏄᏉᏫᏍᎬ.  ᎯᎠ ᎤᏪᎾᎢ ᎤᎭᎨᏛ ᏫᏚᏳᎪᏛ ᎦᎳᏅᎯ, ᏚᏩᏂᎦᎸ, ᎤᏲᎱᏒ ᏧᎦᎶᎦ ᎠᎴ ᎤᏠᏯᏍᏗ. ᎣᏂᏗᏢ ᎯᎠ ᎠᎦᏴᎵ ᎠᏓᎦᏴᎵᎨ ᎨᏒᎢ ᎯᎠ ᎤᎵᎶᎯ ᏗᎦᎶᎪᏗ ᎾᏍᎩᎾᎢ wetland ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᎤᎪᏗᏗ ᎠᏂ ᏫᎵ ᎤᎭ ᏭᏪᏙᎢ ᎾᎿ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ ᎥᏓᎵ.  ᎯᎠ ᎤᎭᎵᏍᏕᎸᏙᏗ [[wetlands]] ᎠᎴ ᎦᏟᏐᏗᎩ ᎠᏔᎴᏒ ᎠᎹᏱ ᎤᎾᏅᏛ ᎤᏚᎳᏗ ᎤᏗᏗᏢ ᏗᎪᏏᏌᏅ.
 
-'''ᎯᎠ grazing ᏂᎬᏅ (ᏂᎬᏅ)'''
+===ᎯᎠ grazing ᏂᎬᏅ (ᏂᎬᏅ)===
 
 ᏥᏄᏍᏗ ᎯᎠ wetland ᎧᎵᎢ ᎠᎴ dries ᎠᏥᏄᏉᏫᏍᎬ, ᏩᎦ ᏗᏴᏙᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᎷᎯᏍᏗ ᎾᏍᎩ ᎠᎴ ᎾᏍᎩ ᏗᏙᎳᎩ ᏂᎬᏅ ᏗᎾᏙᎳᎩ ᎾᏍᎩᎾᎢ grazing.  ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ ᎬᏙᏗ ᎥᏝ ᎪᎱᏍᏗ ᎠᎴ ᎠᏙᎯ ᎢᎾᎨ ᎡᎳᏗ ᎯᎠ ᎤᏪᏴᎢ ᎠᏍᏛᎢ, ᎪᎯ ᏓᏓᏁᎳᏁ ᏧᎬᏩᎶᏗᏯ ᎾᎿᎢ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᎡᎿᎢ ᎡᎥ ᎦᏙ ᎤᏍᏗ ᎢᏳᏃ ᏰᎵ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎧᏃᎯᏯᏍᏗ.
 
-'''ᎯᎠ riverine ᎠᏙᎯ ᎢᎾᎨ'''
+===ᎯᎠ riverine ᎠᏙᎯ ᎢᎾᎨ===
 
 ᎠᎴ ᏭᎵᏍᏆᏛ ᎯᎠ ᏂᎬᏅ ᏫᎵ ᎾᏍᏋ colonized ᎾᎥᎢ riverine ᏕᏡᎬ, ᎢᏯᏛᏁᎵᏓᏍᏗ aspens, ᏕᎴᎦᎵᏍ ᎠᎴ ᏯᏛᎿ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏙ ᎤᏍᏗ ᎠᎴ favored ᎾᎥᎢ ᎯᎠ ᏙᏯ.  ᎾᎾᎢ ᎪᎯ ᎪᏍᏓᏱ ᎯᎠ ᏙᏯ ᎠᎴ ᏄᏓᎷᎸᎾ recolonize ᎯᎠ ᎡᏍᎦᏂ ᎠᎴ ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎠᏂᎩᏍᏗ ᎦᏬᎯᎸᏙᏗ ᎠᏏᏇ.
 
-'''ᎭᏫᏂ ᎦᏙᎯ'''
+===ᎭᏫᏂ ᎦᏙᎯ===
 
-ᏥᏄᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎾᎥᎢ ᎯᎠ ᎦᎸᎳᏗᏢ, ᎠᏂᏏᏴᏫᎭ ᎢᏳᏩᎪᏗ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᏅᎬᎪᎪᎩ ᎤᏩᏌᏊ, ᏄᏓᎴ ᏫᏚᏳᎪᏛ ᎤᏪᎾᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎦᏙᎯ ᎨᏒᎢ ᎦᏟᏌᏅᎯ ᎯᎠ ᎭᏫᏂ ᎯᎠ ᎤᎨᏓᎵᏴ.  ᎯᎠ ᎤᎨᏓᎵᏴ ᎷᏍᎦᏃᎵ ᎧᎵᎢ ᎦᎸᎳᏗᏢ ᎠᎴ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎡᏍᎦᏂ ᎾᎾᎢ ᎯᎠ ᎭᏫᏂ ᏓᎩᏍᎬᎢ wider ᎠᎴ wider.  ᏅᎠᏯᏍᏗ ᎨᏒᎢ sparce ᎾᎿ ᎪᎯ ᎢᏳᏍᏗ ᎧᏃᎮᏗ, ᎠᎴ ᎾᏍᎩ ᎤᏁᎵᏒᎯ ᏄᏓᎷᎸᎾ Ꮎ ᎤᏣᏘ ᎯᎠ fabled ᎭᏫᏂ ᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᏥᏄᏍᏛᎩ  ᎪᏢᏅᎯ, ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎦᏟᏌᏅᎯ , ᎾᎥᎢ ᎯᎠ ᏓᏁᎸᏔᏅ ᎯᎠ ᎤᎾᏁᎶᏔᏅ ᏙᏯ ᎦᏙ ᎤᏍᏗ ᎠᎴᏂᏙᎸ ᎾᎿᎢ.
+ᏥᏄᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎾᎥᎢ ᎯᎠ ᎦᎸᎳᏗᏢ, ᎠᏂᏏᏴᏫᎭ ᎢᏳᏩᎪᏗ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᏅᎬᎪᎪᎩ ᎤᏩᏌᏊ, ᏄᏓᎴ ᏫᏚᏳᎪᏛ ᎤᏪᎾᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎦᏙᎯ ᎨᏒᎢ ᎦᏟᏌᏅᎯ ᎯᎠ ᎭᏫᏂ ᎯᎠ ᎤᎨᏓᎵᏴ.  ᎯᎠ ᎤᎨᏓᎵᏴ ᎷᏍᎦᏃᎵ ᎧᎵᎢ ᎦᎸᎳᏗᏢ ᎠᎴ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎡᏍᎦᏂ ᎾᎾᎢ ᎯᎠ ᎭᏫᏂ ᏓᎩᏍᎬᎢ wider ᎠᎴ wider.  ᏅᎠᏯᏍᏗ ᎨᏒᎢ sparse ᎾᎿ ᎪᎯ ᎢᏳᏍᏗ ᎧᏃᎮᏗ, ᎠᎴ ᎾᏍᎩ ᎤᏁᎵᏒᎯ ᏄᏓᎷᎸᎾ Ꮎ ᎤᏣᏘ ᎯᎠ fabled ᎭᏫᏂ ᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᏥᏄᏍᏛᎩ  ᎪᏢᏅᎯ, ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎦᏟᏌᏅᎯ , ᎾᎥᎢ ᎯᎠ ᏓᏁᎸᏔᏅ ᎯᎠ ᎤᎾᏁᎶᏔᏅ ᏙᏯ ᎦᏙ ᎤᏍᏗ ᎠᎴᏂᏙᎸ ᎾᎿᎢ.
 
-'''Nutrient ᎠᎲᏏᏓᏍᏗ'''
+===Nutrient ᎠᎲᏏᏓᏍᏗ===
 
-ᎯᎠ ᎠᎲᏏᏓᏍᏗ nutrients ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏪᏴᎢ ᎠᏕᏴᎠᏍᎬ ᎾᎥᎢ ᏙᏯ ᎥᏓᎵ ᎨᏒᎢ ᎤᏍᏆᏂᎪᏗ ᎠᎴ ᎤᏙᎯᏳ ᏧᎬᏩᎶᏗᏯ ᏧᎵᎬᏩᎳᏅᎯ.  ᏓᎦᎶᎩᏍᎬ ᎨᎳᏛᏍᏗ ᎯᎠ [[banks (river)|banks]] ᎤᏪᏴ ᎢᏳᏓᎵᎭ ᎧᏁᏉᎠ ᎯᎠ ᏗᎧᎵ phosphates, nitrates ᎠᎴ ᏐᎢ nutrients ᎠᎴ ᎾᏍᎩ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᏗᎦᏎᏍᏙᏗ ᎨᎢ ᎯᎳᎪ ᎢᏳ ᎪᎯ ᎠᎹ ᎨᏒᎢ ᎠᎲᏏᏓᏍᏗ ᎾᏍᎩᎾᎢ anaditsgv. ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎦᎳᏅᎯ, ᎯᎠ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎠᏓᏂᏢᏗ ᎢᎦᏛ ᎠᎴ ᏚᏩᏂᎦᎸ ᏂᏛᎴᏅᏓ ᎯᎠ ᏙᏯ ᎠᎵᏂᎬᏁᏗᎢ ᎠᎴ ᏧᎦᎶᎦ, ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎶᏒᎩ.  ᎯᎠ ᏄᎬᏫᏳᏒ ᏑᏓᎴᎩ ᎪᎯ ᏭᏚᎸᏛ ᎬᏙᏗ ᎨᏒᎢ cellulose, polymer ᏰᎵ ᎤᎦᎾᏍᏛ molecules  (polyglucose?).  ᎤᎪᏗᏗ ᎢᎦᎢ ᎠᏛᎯᏍᏙᏗ cellulase ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᏗᏍᏡᏴ ᎤᏣᏘᎾ ᎯᎠ ᏰᎵ ᎤᎦᎾᏍᏛ ᎠᎴ ᎬᏙᏗ ᎾᏍᎩ ᎾᏍᎩᎾᎢ ᏄᎵᏂᎬᎬ.  ᎣᏍᏛ ᏥᏄᏍᏗ algae ᎠᎩᏍᏗᏱ ᎤᎾᏤᎵ ᏄᎵᏂᎬᎬ ᏂᏛᎴᏅᏓ sunlight, ᎾᏍᎩ ᎯᎠ ᎢᎦᎢ ᎠᎩᏍᏗᏱ ᎤᎾᏤᎵ ᏄᎵᏂᎬᎬ ᏂᏛᎴᏅᏓ cellulose ᎠᎴ ᎤᏅᏌ ᎤᏙᏢᏒ ᎯᎠ alenvdidsv ᎤᏙᎯᏳ ᎤᏠᏱ ᎠᎵᏍᏓᏴᏗ ᎤᎾᏓᏕᏒᏓ.  ᏱᏂᎬᏛᎾ ᏗᏓᎴᎲᏍᎬ ᏄᎵᏂᎬᎬ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᎤᏛᏏᏗᏒ.  ᎾᏍᎩ ᎯᎠ ᎢᎦᎢ ᎠᎴ ᎤᏲᏏ ᎾᏍᎩᎾᎢ ᏂᎦᎥᎢ molecule nitrogen ᎠᎴ phosporous ᎤᏅᏌ ᏰᎵᏇ ᎦᏂᏯᏗ.  ᎭᏫᎾᏗᏢ ᎪᎯ ᎦᎶᎯᏍᏗ, ᎾᏍᎩ ᎯᎠ, ᎠᎴ ᏐᎢ nutrients ᎠᎴ ᎣᏍᏛ ᏄᏩᏁᎸ ᎾᎾᎯ ᎯᎠ ᏙᏯ ᎥᏓᎵ ᎠᎴ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᎤᎾᏙᏢᎯ ᎠᎴ ᎠᎲᏓ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏪᏴᎢ.  ᎯᎠ ᎠᏥᏂᏱᏍᎬ ᎾᏍᎩ ᎯᎠ nutrients ᏧᎾᎵᏍᏕᎸᏗ ᏗᎪᏏᏐᏗ ᎯᎠ ᎡᏆ ᏛᏍᏓᏅᏅᏍᎬ ᎯᎠ ᏄᎵᏍᏔᏅ ᎭᏫᏂ ᎦᏙᎯ.
+ᎯᎠ ᎠᎲᏏᏓᏍᏗ nutrients ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏪᏴᎢ ᎠᏕᏴᎠᏍᎬ ᎾᎥᎢ ᏙᏯ ᎥᏓᎵ ᎨᏒᎢ ᎤᏍᏆᏂᎪᏗ ᎠᎴ ᎤᏙᎯᏳ ᏧᎬᏩᎶᏗᏯ ᏧᎵᎬᏩᎳᏅᎯ.  ᏓᎦᎶᎩᏍᎬ ᎨᎳᏛᏍᏗ ᎯᎠ [[banks (river)|banks]] ᎤᏪᏴ ᎢᏳᏓᎵᎭ ᎧᏁᏉᎠ ᎯᎠ ᏗᎧᎵ phosphates, nitrates ᎠᎴ ᏐᎢ nutrients ᎠᎴ ᎾᏍᎩ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᏗᎦᏎᏍᏙᏗ ᎨᎢ ᎯᎳᎪ ᎢᏳ ᎪᎯ ᎠᎹ ᎨᏒᎢ ᎠᎲᏏᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎠᎾᏗᏔᏍᎬ. ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎦᎳᏅᎯ, ᎯᎠ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎠᏓᏂᏢᏗ ᎢᎦᏛ ᎠᎴ ᏚᏩᏂᎦᎸ ᏂᏛᎴᏅᏓ ᎯᎠ ᏙᏯ ᎠᎵᏂᎬᏁᏗᎢ ᎠᎴ ᏧᎦᎶᎦ, ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎶᏒᎩ.  ᎯᎠ ᏄᎬᏫᏳᏒ ᏑᏓᎴᎩ ᎪᎯ ᏭᏚᎸᏛ ᎬᏙᏗ ᎨᏒᎢ cellulose, polymer ᏰᎵ ᎤᎦᎾᏍᏛ molecules  (polyglucose?).  ᎤᎪᏗᏗ ᎢᎦᎢ ᎠᏛᎯᏍᏙᏗ cellulase ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᏗᏍᏡᏴ ᎤᏣᏘᎾ ᎯᎠ ᏰᎵ ᎤᎦᎾᏍᏛ ᎠᎴ ᎬᏙᏗ ᎾᏍᎩ ᎾᏍᎩᎾᎢ ᏄᎵᏂᎬᎬ.  ᎣᏍᏛ ᏥᏄᏍᏗ algae ᎠᎩᏍᏗᏱ ᎤᎾᏤᎵ ᏄᎵᏂᎬᎬ ᏂᏛᎴᏅᏓ sunlight, ᎾᏍᎩ ᎯᎠ ᎢᎦᎢ ᎠᎩᏍᏗᏱ ᎤᎾᏤᎵ ᏄᎵᏂᎬᎬ ᏂᏛᎴᏅᏓ cellulose ᎠᎴ ᎤᏅᏌ ᎤᏙᏢᏒ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎤᏙᎯᏳ ᎤᏠᏱ ᎠᎵᏍᏓᏴᏗ ᎤᎾᏓᏕᏒᏓ.  ᏱᏂᎬᏛᎾ ᏗᏓᎴᎲᏍᎬ ᏄᎵᏂᎬᎬ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᎤᏛᏏᏗᏒ.  ᎾᏍᎩ ᎯᎠ ᎢᎦᎢ ᎠᎴ ᎤᏲᏏ ᎾᏍᎩᎾᎢ ᏂᎦᎥᎢ molecule nitrogen ᎠᎴ phosporous ᎤᏅᏌ ᏰᎵᏇ ᎦᏂᏯᏗ.  ᎭᏫᎾᏗᏢ ᎪᎯ ᎦᎶᎯᏍᏗ, ᎾᏍᎩ ᎯᎠ, ᎠᎴ ᏐᎢ nutrients ᎠᎴ ᎣᏍᏛ ᏄᏩᏁᎸ ᎾᎾᎯ ᎯᎠ ᏙᏯ ᎥᏓᎵ ᎠᎴ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᎤᎾᏙᏢᎯ ᎠᎴ ᎠᎲᏓ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏪᏴᎢ.  ᎯᎠ ᎠᏥᏂᏱᏍᎬ ᎾᏍᎩ ᎯᎠ nutrients ᏧᎾᎵᏍᏕᎸᏗ ᏗᎪᏏᏐᏗ ᎯᎠ ᎡᏆ ᏛᏍᏓᏅᏅᏍᎬ ᎯᎠ ᏄᎵᏍᏔᏅ ᎭᏫᏂ ᎦᏙᎯ.
 
 '''Pesticide ᎠᎴ herbicide ᎠᎲᏏᏓᏍᏗ'''
 
@@ -79,9 +80,9 @@
 
 '''Denitrification'''
 
-ᎢᎦᏛ ᎧᏃᎮᎸᏗ ᎤᏬᎯᏳ Ꮎ ᎯᎠ Nitrate ᎤᏪᏴ, ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎣᏍᏛ ᏄᏩᏁᎸ nitrogen ᎬᎾᏬᏍᎬ ᎯᎠ ᏂᎬᏩᏍᏛ ᎠᏓᏠᎯᏍᏗ ᏰᎵᏇ ᎠᎦᏔᎲᏍᏗ ᎦᏐᎯ ᎾᎾᎯ nitrogen ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ, ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏥᏄᏍᏗ ᎤᏣᏘ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎠᏆᏤᎵ ᎤᎾᏙᏢᎯ ᏥᏄᏍᏗ ᎤᎦᏔ ᏅᏓᏳᏓᎴᏅ ᏬᏗᎨ Dioxide ᎠᏛᎯᏍᏙᏗ.  ᎾᏍᎩ ᎨᏒᎢ ᏄᏓᎷᎸᎾ, ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᎯᏳᏔᏅᎯ, Ꮎ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎨᎳᏛᏍᏗ ᎤᏪᏴᎢ ᎠᎾᏍᎬᏘ ᎠᎵᏍᎪᎸᏙᏗ denitrification.  ᎭᏫᎾᏗᏢ ᏗᏓᏲᎯᏍᏗ digakohidi, denitrification ᎨᏒᎢ achieved ᎾᎥᎢ ᎦᎶᏍᎬ ᎯᎠ ᎠᎹ ᏗᎬᏩᎶᏒ ᎦᏌᏆᎸ aerobic ᎠᎴ anaerobic ᎠᏓᏅᏍᏗ.  ᎭᏫᎾᏗᏢ ᏙᏯ ᎠᏓᎦᏴᎵᎨ, ᏥᏄᏍᏗ ᎯᎠ ᎠᎹ seeps ᎡᎳᏗ ᎾᎾᎯ ᎯᎠ ᎦᏙᎯ, ᎯᎠ ᎥᎴᏂᏙᎲ ᎨᏒᎢ ᎬᏔᏅᎯ ᎦᎸᎳᏗᏢ ᎾᎥᎢ ᎯᎠ ᎦᏂᏝᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᎾᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᏫᏚᏳᎪᏛ.  ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᏂᎦᏛ ᎯᎠ ᎥᎴᏂᏙᎲ ᎨᏒᎢ ᎬᏔᏅᎯ ᎦᎸᎳᏗᏢ ᎠᎴ ᎯᎠ ᎦᏙᎯ ᏗᏙᎳᎩ anaerobic.  ᎪᎯ ᎠᎹ ᏭᎵᏱᎶᎸ ᎠᏩᏛᏓ Ꮝ ᎦᎶᎯᏍᏗ ᎾᎾᎯ ᎯᎠ ᎤᏪᏴᎢ ᎠᎴ ᎾᎾᎯ ᏄᏓᎴ ᏙᏯ ᎠᏓᎦᏴᎵᎨ.  ᎪᎯ aerobic, anaerobic ᎠᏓᏠᎯᏍᏗ ᏫᎬᎵᏱᎴᎩ ᏂᎦᏛ ᎯᎠ ᎦᎶᎯᏍᏗ ᎡᎳᏗ ᎯᎠ ᎤᏪᏴᎢ.   
+ᎢᎦᏛ ᎧᏃᎮᎸᏗ ᎤᏬᎯᏳ Ꮎ ᎯᎠ Nitrate ᎤᏪᏴ, ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎣᏍᏛ ᏄᏩᏁᎸ nitrogen ᎬᎾᏬᏍᎬ ᎯᎠ ᏂᎬᏩᏍᏛ ᎠᏓᏠᎯᏍᏗ ᏰᎵᏇ ᎠᎦᏔᎲᏍᏗ ᎦᏐᎯ ᎾᎾᎯ nitrogen ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ, ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏥᏄᏍᏗ ᎤᏣᏘ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎠᏆᏤᎵ ᎤᎾᏙᏢᎯ ᏥᏄᏍᏗ ᎤᎦᏔ ᏅᏓᏳᏓᎴᏅ ᏬᏗᎨ Dioxide ᎠᏛᎯᏍᏙᏗ.  ᎾᏍᎩ ᎨᏒᎢ ᏄᏓᎷᎸᎾ, ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᎯᏳᏔᏅᎯ, Ꮎ ᏙᏯ ᎠᏓᎦᏴᎵᎨ ᎨᎳᏛᏍᏗ ᎤᏪᏴᎢ ᎠᎾᏍᎬᏘ ᎠᎵᏍᎪᎸᏙᏗ denitrification.  ᎭᏫᎾᏗᏢ ᏗᏓᏲᎯᏍᏗ [[plants|ᏗᎦᎪᎯᏗ]], denitrification ᎨᏒᎢ achieved ᎾᎥᎢ ᎦᎶᏍᎬ ᎯᎠ ᎠᎹ ᏗᎬᏩᎶᏒ ᎦᏌᏆᎸ aerobic ᎠᎴ anaerobic ᎠᏓᏅᏍᏗ.  ᎭᏫᎾᏗᏢ ᏙᏯ ᎠᏓᎦᏴᎵᎨ, ᏥᏄᏍᏗ ᎯᎠ ᎠᎹ seeps ᎡᎳᏗ ᎾᎾᎯ ᎯᎠ ᎦᏙᎯ, ᎯᎠ ᎥᎴᏂᏙᎲ ᎨᏒᎢ ᎬᏔᏅᎯ ᎦᎸᎳᏗᏢ ᎾᎥᎢ ᎯᎠ ᎦᏂᏝᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᎾᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᏫᏚᏳᎪᏛ.  ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᏂᎦᏛ ᎯᎠ ᎥᎴᏂᏙᎲ ᎨᏒᎢ ᎬᏔᏅᎯ ᎦᎸᎳᏗᏢ ᎠᎴ ᎯᎠ ᎦᏙᎯ ᏗᏙᎳᎩ anaerobic.  ᎪᎯ ᎠᎹ ᏭᎵᏱᎶᎸ ᎠᏩᏛᏓ Ꮝ ᎦᎶᎯᏍᏗ ᎾᎾᎯ ᎯᎠ ᎤᏪᏴᎢ ᎠᎴ ᎾᎾᎯ ᏄᏓᎴ ᏙᏯ ᎠᏓᎦᏴᎵᎨ.  ᎪᎯ aerobic, anaerobic ᎠᏓᏠᎯᏍᏗ ᏫᎬᎵᏱᎴᎩ ᏂᎦᏛ ᎯᎠ ᎦᎶᎯᏍᏗ ᎡᎳᏗ ᎯᎠ ᎤᏪᏴᎢ.   
     
-ᏙᏯ ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏅᏛ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏙᎯᏳ ᎡᏆ ᎠᏓᎦᏴᎵᎨ,<ref>http://abob.libs.ᎤᎦ.edu/bobk/bbeavdam.html</ref> ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏛᎩ ᎪᎷᏩᏛᏓ ᎾᎥᏂᎨ ᏦᎢ ᏴᎩ, Montana ᎠᎴ ᏥᏄᏍᏛᎩ 2,140 ᏧᎾᎳᏏᏕᎾ ᎦᏅᎯᏓ, 14 ᏧᎾᎳᏏᏕᎾ ᎦᎸᎳᏗ, ᎠᎴ 23 ᏧᎾᎳᏏᏕᎾ ᎤᎭᎨᏛ ᎾᎾᎢ ᎯᎠ alenvdidsv.<ref>http://ᎣᏪᏅᏒ.earthlink.ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ/~scouters2/ᏙᏯ.html</ref>  ᎯᎳᎪ ᎢᏳ ᎠᏓᏲᏍᏓᏁᏗ ᏙᏯ ᎦᏃᎱᎩᏍᎬ ᏄᎵᏍᏔᏅ, ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᎹ ᎤᏩᎾᏕᏍᎩ ᎠᎨᏔᏗᏍᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ᏰᎵᏇ ᎾᏍᏋ ᏧᏂᎸᏫᏍᏓᏁ ᏕᎨᏥᎧᏅ ᎾᏍᎩᎾᎢ ᏓᎬᏩᎶᏛ-ᎢᏳᎵᏍᏙᏗᏱ ᎠᎴ environmentally ᎤᏃᏴᎬ ᎪᎷᏩᏛᏓ.  Unwanted ᎤᏲᏨᎯ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎠᏲᎠᏍᏔᏅᎯ ᎾᎥᎢ ᎠᏰᎵ ᏥᏔᎦ ᎤᏯᏅᎯ ᎠᎴ ᏗᎬᎯᏓ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ yvwatuwidv ᎯᎠ alenvdidsv ᏕᏡᎬ.<ref>http://www.BeaversWW.org</ref>
+ᏙᏯ ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏅᏛ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏙᎯᏳ ᎡᏆ ᎠᏓᎦᏴᎵᎨ,<ref>http://abob.libs.ᎤᎦ.edu/bobk/bbeavdam.html</ref> ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏛᎩ ᎪᎷᏩᏛᏓ ᎾᎥᏂᎨ ᏦᎢ ᏴᎩ, [[Montana|ᎹᎾᏖᎾ]] ᎠᎴ ᏥᏄᏍᏛᎩ 2,140 ᏧᎾᎳᏏᏕᎾ ᎦᏅᎯᏓ, 14 ᏧᎾᎳᏏᏕᎾ ᎦᎸᎳᏗ, ᎠᎴ 23 ᏧᎾᎳᏏᏕᎾ ᎤᎭᎨᏛ ᎾᎾᎢ ᎯᎠ ᎠᎴᏅᏗᏍᎬ.<ref>http://ᎣᏪᏅᏒ.earthlink.ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ/~scouters2/ᏙᏯ.html</ref>  ᎯᎳᎪ ᎢᏳ ᎠᏓᏲᏍᏓᏁᏗ ᏙᏯ ᎦᏃᎱᎩᏍᎬ ᏄᎵᏍᏔᏅ, ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᎹ ᎤᏩᎾᏕᏍᎩ ᎠᎨᏔᏗᏍᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ᏰᎵᏇ ᎾᏍᏋ ᏧᏂᎸᏫᏍᏓᏁ ᏕᎨᏥᎧᏅ ᎾᏍᎩᎾᎢ ᏓᎬᏩᎶᏛ-ᎢᏳᎵᏍᏙᏗᏱ ᎠᎴ environmentally ᎤᏃᏴᎬ ᎪᎷᏩᏛᏓ.  Unwanted ᎤᏲᏨᎯ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎠᏲᎠᏍᏔᏅᎯ ᎾᎥᎢ ᎠᏰᎵ ᏥᏔᎦ ᎤᏯᏅᎯ ᎠᎴ ᏗᎬᎯᏓ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏴᏩᏚᏫᏛ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏕᏡᎬ.<ref>http://www.BeaversWW.org</ref>
 
 === ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ ===
 ᎯᎠ ᎥᏓᎵ ᎪᏢᏅᎯ ᎾᎥᎢ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎠᏓᎦᏴᎵᎨ ᎠᎵᏍᏕᎸᏗ ᎠᎽᏰᎵ ᎯᎠ ᏙᏯ' ᎣᏪᏅᏒ, ᎤᎾᏤᎵ ''ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ'', ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ severed ᏚᏩᏂᎦᎸ ᎠᎴ ᏝᏬᏚ. ᎯᎠ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ ᎤᎭ underwater ᎠᏴᏍᏙᏗ ᎪᏢᏗ ᎠᏴᏍᏗ ᎾᎥᏂᎨᏍᏗ ᏰᎵ ᏂᎨᏒᎾ ᎾᏍᎩᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎦᏂᏝᎢ (ᏱᏂᎬᏛᎾ, [[musk rat|ᏎᎳᎩᏍᏆ]] ᎤᎭ ᏭᏪᏙᎢ ᎠᎪᎲᎢ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏙᏯ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ ᎬᏙᏗ ᎯᎠ ᏙᏯ ᎦᎪ ᎪᏢᏅᎯ ᎾᏍᎩ). ᎤᏙᎯᏳ ᎤᏍᏗ ᎢᎦᎢ ᎨᏒ ᎯᎠ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᎴᏂᏙᎲ ᎡᏍᎦᏂ.  ᎠᎵᏍᎦᏁᏍᎩ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ, ᏙᏯ ᎤᏙᎯᏳᎯᏯ ᎠᏍᎪᏍᏗ ᎠᏥᏄᏉᏫᏍᎬ ᎤᎾᏤᎵ ᎦᏁᎸ ᎬᏙᏗ underwater ᎠᏴᏍᏙᏗ ᎤᎶᏐᏅ ᎤᏅᏌ ᎠᏍᏆᏗᏍᏗ ᎠᏓᏁᎸ ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᎠᎴ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ ᎠᏛᎯᏍᏙᏗ.  ᎾᎿᎢ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏔᎵ ᎦᏁᎸ ᎭᏫᏂᏗᏢ ᎯᎠ ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ, ᏌᏊ ᎾᏍᎩᎾᎢ ᎤᎧᏲᏗ ᎤᏣᏘᎾ ᎤᎶᏐᏅ ᎠᏁᎳᏗᏍᏗ ᎯᎠ ᎠᎹ, ᎠᎴ ᏄᏓᎴ, ᏓᏣᏁᎬ ᏌᏊ ᎭᏢᏃ ᎯᎠ ᏏᏓᏁᎸᎯ ᎤᏙᎯᏳᎯᏯ ᎠᎴᏂᏙᎠ.
@@ -90,80 +91,79 @@
 ᎯᎳᎪ ᎢᏳ startled ᎠᎴ ᎤᎾᏰᎯᏍᏗ, ᎠᏓᏬᏍᎬ ᏙᏯ ᏫᎵ ᎤᎵᏍᏓᎯᎨ ᏗᎵᎬᏯᏍᏗ ᎾᎯᏳᎢ forcefully slapping ᎯᎠ ᎠᎹ ᎬᏙᏗ Ꮝ ᎠᏯᏖᎾ ᎦᏂᏓᏛ.  ᎪᎯ ᎪᏢᏗ ᎠᏍᏓᏯ 'ᎠᏓᏏᏛᏂᏍᏗ', ᎤᏃᏴᎬ ᎦᏬᎯᎸᏙᏗ ᎡᏆ ᎾᎿ ᎢᏴᎢ ᎦᎸᎳᏗᏢ ᎠᎴ ᎡᎳᏗᏢ ᎠᎹ.  ᎪᎯ ᎤᏃᏴᎬ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᎾᎿ ᏐᎢ ᏙᏯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ.  ᏌᏊ ᎢᏳᏩᎫᏗ ᏙᏯ ᎤᎭ ᎪᏢᏅᎯ ᎪᎯ ᎦᏂᏰᎩ ᏂᎬᎢ, ᏂᎦᏛ nearby ᏙᏯ ᏫᎵ ᏗᎵᎬᏯᏍᏗ ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ reemerge ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎢᏳᏩᎪᏗ.
 
 == ᎤᏭᏯᏔᏅ ᏗᏓᏁᏟᏴᎡᏗ ==
-ᏙᏯ ᎠᏰᎵ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[barter|ᏗᎵᎪᏔᏅᎯ]] ᎾᎥᎢ [[Indigenous peoples of the Americas|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[17th century|17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎤᏁᏉᎢᏍᏗ [[Europe|ᏳᎳᏛ]] ᏧᎬᏩᎶᏗ. ᎤᏅᏌ ᎨᏒᎩ ᎾᎯᏳᎢ ᏭᏅᎩ ᎦᏐᎯ [[Great Britain|ᎡᎵᏏᎯ]] ᎠᎴ [[France]] ᎭᏢᏃ ᎤᏅᏌ ᎨᏒᎩ ᎪᏢᏅᎯ ᎾᎾᎯ ᏗᏄᏬ ᏫᏚᏳᎪᏛ. ᏂᎬᎢ ᎠᏂᏃᎯᎵᏙᎲ ᎠᎴ ᎠᏣᏅᏙ ᏙᏯ ᎤᏗᏅᏒᎩ ᎤᎾᏤᎵ endangerment. ᏭᎵᏱᎶᎸ, ᎯᎠ [[fur trade|ᎤᏭᏯᏔᏅ ᏗᏓᏁᏟᏴᎡᏗ]] ᎤᏅᏨᎩ ᏧᎦᎴᏅᏓ ᎤᏍᏆᎸᎲ ᎢᏳᏕᏘᏴᏓ ᎠᏔᏲᏍᏗ ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]] ᎠᎴ ᎯᎠ takeover ᎠᏣᏅᏙ ᏗᎦᏙᎯ ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᎠᏛᏏᏒ ᏗᎦᎶᎪᏗ ᎢᎦᏛ. ᎤᏍᏗ resurgence ᎭᏫᎾᏗᏢ ᏙᏯ ᎠᏣᏅᏙ ᎤᎭ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎡᏍᎦᏂ ᎭᏢᏃ ᎾᎿᎢ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ-ᎾᏂᎥ ᏴᏫ ᏙᏯ; ᎠᏣᏅᏙ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎠᏍᏆᏛᎯ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᏭᏯᏔᏅ ᎨᏒᎢ ᏧᎬᏩᎶᏗ, ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎯᎠ ᎦᏂᏝᎢ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ utilized ᏥᏄᏍᏗ ᎦᏂᏝᎢ ᎨᎳᏍᏙᏗ.
+ᏙᏯ ᎠᏰᎵ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[barter|ᏗᎵᎪᏔᏅᎯ]] ᎾᎥᎢ [[Indigenous peoples of the Americas|ᎠᏂᏴᏫᏯᎢ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[17th century|17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎤᏁᏉᎢᏍᏗ [[Europe|ᏳᎳᏛ]] ᏧᎬᏩᎶᏗ. ᎤᏅᏌ ᎨᏒᎩ ᎾᎯᏳᎢ ᏭᏅᎩ ᎦᏐᎯ [[Great Britain|ᎡᎵᏏᎯ]] ᎠᎴ [[France|ᎦᎸᏥᏱ]] ᎭᏢᏃ ᎤᏅᏌ ᎨᏒᎩ ᎪᏢᏅᎯ ᎾᎾᎯ ᏗᏄᏬ ᏫᏚᏳᎪᏛ. ᏂᎬᎢ ᎠᏂᏃᎯᎵᏙᎲ ᎠᎴ ᎠᏣᏅᏙ ᏙᏯ ᎤᏗᏅᏒᎩ ᎤᎾᏤᎵ endangerment. ᏭᎵᏱᎶᎸ, ᎯᎠ [[fur trade|ᎤᏭᏯᏔᏅ ᏗᏓᏁᏟᏴᎡᏗ]] ᎤᏅᏨᎩ ᏧᎦᎴᏅᏓ ᎤᏍᏆᎸᎲ ᎢᏳᏕᏘᏴᏓ ᎠᏔᏲᏍᏗ ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]] ᎠᎴ ᎯᎠ takeover ᎠᏣᏅᏙ ᏗᎦᏙᎯ ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᎠᏛᏏᏒ ᏗᎦᎶᎪᏗ ᎢᎦᏛ. ᎤᏍᏗ resurgence ᎭᏫᎾᏗᏢ ᏙᏯ ᎠᏣᏅᏙ ᎤᎭ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎡᏍᎦᏂ ᎭᏢᏃ ᎾᎿᎢ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ-ᎾᏂᎥ ᏴᏫ ᏙᏯ; ᎠᏣᏅᏙ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎠᏍᏆᏛᎯ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᏭᏯᏔᏅ ᎨᏒᎢ ᏧᎬᏩᎶᏗ, ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎯᎠ ᎦᏂᏝᎢ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ utilized ᏥᏄᏍᏗ ᎦᏂᏝᎢ ᎨᎳᏍᏙᏗ.
 
 == ᎭᏫᎾᏗᏢ ᎥᎦᏔᎲᎢ ==
 ᎤᏂᎸᏉᏗ ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎢᏯᏓᏛᏁᎸ ᎯᎠ ᎦᏂᏝᎢ ᎤᏙᎯᏳᎯᏯ, ᏥᏄᏍᏗ ᎣᏍᏛ ᏄᏓᏅᏘᏴ ᎠᎴ ᎠᎾᏕᎶᏆᏍᎬ ᎠᎦᏓᏅᏖᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏍᎦᏯ. ᎠᎴ ᎠᎨᏴ. ᏙᏯ ᎦᎪ ᎠᎴ ᎤᎵᏍᎨᏛ ᎠᎵᎦᎵᏴᎯ ᎠᎦᏓᏅᏖᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏳᏕᏘᏴᏓ [[fantasy novel|ᎢᏰᎵᏍᏗᎢ ᏗᎪᎵᏰᏗ ᎪᏪᎵ]], ''[[The Lion, the Witch and the Wardrobe|ᎯᎠ ᏢᏓᏥ, ᎯᎠ ᎠᏣᏍᎩᎵ ᎠᎴ ᎯᎠ ᎫᏢᎥᏍᎬ]]''.  ᎯᎠ ᏙᏯ ᎤᏤᎵ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ, ᏗᎦᎶᎪᏗ ᎠᎴ ᎠᏂᏙᎾᎥ ᏄᏍᏗᏓᏅ (ᏥᏄᏍᏗ 1908) ᎠᎴ ᏗᏍᏆᎸᏙᏗ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎭᏫᎾᏗᏢ ''[[The Tent Dwellers|ᎯᎠ ᎦᎵᏦᏓᏗ ᎡᎯ]]'', ᎾᎥᎢ [[Albert Bigelow Paine]]. 
 
 ᎯᎠ [[American Beaver|ᎠᎹᏰᏟ ᏙᏯ]] (''C. canadensis'') ᎨᏒᎢ ᎯᎠ [[List of national animals|ᎬᎾᏕᎾ ᎦᏂᏝᎢ]] [[Canada|ᎧᎾᏓ]]; ᎾᏍᎩ ᎨᏒᎢ depicted ᎾᎿ ᎯᎠ [[Nickel (Canadian coin)|ᎧᎾᏓ ᎯᏍᎩ-ᎢᏯᏓᏅᏖᏗ ᎠᎬᎭᎸᏓ]] ᎠᎴ ᏥᏄᏍᏛᎩ ᎾᎿ ᎯᎠ ᎢᎬᏱ ᎦᏁᎳ [[postage stamp|postage ᎦᏯᎸᏗ]], ᎯᎠ ᏦᎢ ᏌᏊ ᎢᏯᏓᏅᏖᏗ ᏙᏯ. ᏥᏄᏍᏗ [[national symbol|ᎬᎾᏕᎾ ᏗᎬᏟᎶᏍᏙᏗ]], ᎯᎠ ᎦᏂᏝᎢ ᎨᏒᎢ favorite ᎠᏑᏰᏛ ᎾᏍᎩᎾᎢ ᎠᏂᎶᏁᏍᎬ ᎦᏁᎳ ᏥᏄᏍᏗ furry ᎠᎦᏓᏅᏖᏗ ᎠᎴ ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎾᏍᏋ ᎯᎠ [[mascot|ᎤᏝᏅᏓᏕᎲ]] [[1976 Summer Olympics|1976 ᎪᎨᏱ Olympics]] ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ [[Montreal]] ᎬᏙᏗ ᎯᎠ ᏚᏙᎥ "Amik" ("ᏙᏯ" ᎭᏫᎾᏗᏢ [[Algonquin language|Algonquin]]). ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ ᎤᎪᏗᏗ ᏌᏊᎭ ᎠᎴ ᏧᎾᏙᏢᎯ ᎭᏫᏂᏗᏢ ᎯᎠ [[Canadian Forces|ᎧᎾᏓ ᎠᏂᏌᏙᏯᏍᎩ]], ᏯᏛᎿ ᏥᏄᏍᏗ ᎾᎿ ᎯᎠ ᎠᎵᏍᏚᎶ ᎠᎧᏁᏍᏗ ᎯᎠ [[Royal 22e Régiment|ᎠᏥᎸᏉᏗ ᏴᏫ 22e Régiment]] ᎠᎴ ᎯᎠ [[Canadian Military Engineers|ᎧᎾᏓ ᎠᏂᏯᏫᏍᎩ ᎠᏥᎸ ᏗᎯᎴᎩ]]. ᏱᏂᎬᏛᎾ, ᏙᏯ ᎠᎴ ᎠᎦᏎᏍᏔᏅ [[pest (animal)|ᎠᏍᎩᎾᏗᏍᏗ]] ᎾᎥᎢ ᎢᎦᏛ ᏴᏫ.  
 
-[[Oregon]] ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ "ᎯᎠ ᏙᏯ ᎤᏔᏂᏗ ᎦᏙᎯ". ᎯᎠ ᏙᏯ ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎦᏂᏝᎢ ᎠᎴ Ꮝ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎦᎾᏄᎪᎦ ᎾᎿ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎦᏓᏘ. ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ [[List of U.S. state mammals|ᎤᏔᏂᏗ ᎦᏙᎯ mammals]] [[New York|ᎢᏤ York]] (ᎤᎶᏐᏅ ᎯᎠ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎤᏂᎧᏁᏍᏙᏗ [[New Netherland|ᎠᏤ Netherland]]). 
+[[Oregon]] ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ "ᎯᎠ ᏙᏯ ᎤᏔᏂᏗ ᎦᏙᎯ". ᎯᎠ ᏙᏯ ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎦᏂᏝᎢ ᎠᎴ Ꮝ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎦᎾᏄᎪᎦ ᎾᎿ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎦᏓᏘ. ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ [[List of U.S. state mammals|ᎤᏔᏂᏗ ᎦᏙᎯ mammals]] [[New York|ᏄᏯᎩ]] (ᎤᎶᏐᏅ ᎯᎠ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎤᏂᎧᏁᏍᏙᏗ [[New Netherland|ᎠᏤ Netherland]]). 
 
-ᎤᏍᏆᎸᎲ Ꮝ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ capabilities, ᎯᎠ ᏙᏯ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᎯᎠ ᎤᏝᏅᏓᏕᎲ ᎯᎠ [[Massachusetts Institute of Technology|Massachusetts ᏧᎾᏕᏲᏗ  ᎠᏏᎾᏒᎢ]], [[California Institute of Technology|California ᏧᎾᏕᏲᏗ  ᎠᏏᎾᏒᎢ]], [[Oregon State University|Oregon ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ]] ᎠᎴ ᎯᎠ [[University of Toronto|ᏗᏕᎶᏆᏍᏗ  Toronto]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏂᎧᏁᏍᏙᏗ ᎾᏍᎩᎾᎢ [[London School of Economics|London ᏗᏕᎶᏆᏍᏗ  ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎩ]] ᎠᎴ ᎯᎠ ᏚᏙᎥ Ꮝ ᏕᏕᎶᏆᏍᎩ ᎪᏪᎵ ᎦᎴᏴᏔᏅ - [[The Beaver|ᎯᎠ ᏙᏯ]].
+ᎤᏍᏆᎸᎲ Ꮝ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ capabilities, ᎯᎠ ᏙᏯ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᎯᎠ ᎤᏝᏅᏓᏕᎲ ᎯᎠ [[Massachusetts Institute of Technology|ᎺᏌᏧᏎᏗ ᏧᎾᏕᏲᏗ  ᎠᏏᎾᏒᎢ]], [[California Institute of Technology|ᎠᏕᎳᏧᏢᎢ ᏧᎾᏕᏲᏗ  ᎠᏏᎾᏒᎢ]], [[Oregon State University|Oregon ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ]] ᎠᎴ ᎯᎠ [[University of Toronto|ᏗᏕᎶᏆᏍᏗ  Toronto]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏂᎧᏁᏍᏙᏗ ᎾᏍᎩᎾᎢ [[London School of Economics|London ᏗᏕᎶᏆᏍᏗ  ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎩ]] ᎠᎴ ᎯᎠ ᏚᏙᎥ Ꮝ ᏕᏕᎶᏆᏍᎩ ᎪᏪᎵ ᎦᎴᏴᏔᏅ - [[The Beaver|ᎯᎠ ᏙᏯ]].
 
-ᎭᏫᎾᏗᏢ ᎯᎠ 17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᎠᏛᏛᎲᏍᎩ ᎤᏛᎯᏍᏔᏅᎩ ᎾᎥᎢ ᎯᎠ ᎠᎵᏍᏓᏴᏗ [[Quebec]], ᎯᎠ [[Roman Catholic Church|ᎶᎻ ᎠᏥᎸ ᎠᏁᎶᎯ ᏗᎦᎳᏫᏍᏗ]] ruled Ꮎ ᎯᎠ ᏙᏯ ᏥᏄᏍᏛᎩ [[fish|ᎠᏣᏗ]]. ᎯᎠ ᎧᎵᏗᎳᏏᏗ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏧᏚᎪᏔᏅ ᏄᏓᎷᎸᎾ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎬᏙᏗ ᎯᎠ ''[[Summa Theologica]]'' [[Thomas Aquinas]]; ᎦᏙ ᎤᏍᏗ ᏗᎳᏗ ᎦᏂᏝᎢ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᏥᏄᏍᏗ ᎤᏣᏘ ᎾᎿ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏗ ᎠᏓᏁᎳᏅᎯ.<ref>[http://www.newadvent.org/summa/314708.htm ''The Summa Theologica of St. Thomas Aquinas''] ᎧᏬᎳᏕᏍᎬ. 147:8 ᏓᏓᏁᎳᏁ ᎧᎵᏗᎳᏏᏗ ᎦᎫᏍᏓᎥ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᎤᏍᏆᏂᎪᏗ argued ᎭᏫᎾᏗᏢ favour ᏙᏯ ᎠᎴᏂᏙᎲ ᎾᏍᎩᏯᎢ ᎠᏣᏗ.</ref>  ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏂᎦᎥ ᎧᏃᎯᏯᏍᏗ ᎾᎿ ᎯᎠ ᎤᏲᏨᎯ [[meat|ᎭᏫᏯ]] ᎾᎿ ᏧᎾᎩᎶᏍᏗ ᎾᎯᏳᎨᏒ [[Lent|ᎠᏯᏔᎵᏍᏔ]] ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎬᎾᏙᏗ ᏙᏯ ᎭᏫᏯ.  <ref>http://www.chowdc.org/Ꭺ/Saunders%202001.html</ref> <ref>{{fr}}Lacoursière, Jacques. ''Une histoire du Québec'' ISBN 2-89448-050-4 ᏕᎪᏏᏏ Ꮎ ᎠᎵᏍᏓᏴᏗ François ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Laval ᎭᏫᎾᏗᏢ ᎯᎠ 17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ posed ᎯᎠ ᎠᏛᏛᎲᏍᎩ ᎯᎠ ᎤᏍᏆᏂᎪᏗ ᎯᎠ Sorbonne, ᎦᎪ ruled ᎭᏫᎾᏗᏢ favour ᎪᎯ ᏧᏚᎪᏔᏅ.</ref>
+ᎭᏫᎾᏗᏢ ᎯᎠ 17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᎠᏛᏛᎲᏍᎩ ᎤᏛᎯᏍᏔᏅᎩ ᎾᎥᎢ ᎯᎠ ᎠᎵᏍᏓᏴᏗ [[Quebec]], ᎯᎠ [[Roman Catholic Church|ᎶᎻ ᎠᏥᎸ ᎠᏁᎶᎯ ᏗᎦᎳᏫᏍᏗ]] ruled Ꮎ ᎯᎠ ᏙᏯ ᏥᏄᏍᏛᎩ [[fish|ᎠᏣᏗ]]. ᎯᎠ ᎧᎵᏗᎳᏏᏗ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏧᏚᎪᏔᏅ ᏄᏓᎷᎸᎾ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎬᏙᏗ ᎯᎠ ''[[Summa Theologica]]'' [[Thomas Aquinas]]; ᎦᏙ ᎤᏍᏗ ᏗᎳᏗ ᎦᏂᏝᎢ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᏥᏄᏍᏗ ᎤᏣᏘ ᎾᎿ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏗ ᎠᏓᏁᎳᏅᎯ.<ref>[http://www.newadvent.org/summa/314708.htm ''The Summa Theologica of St. Thomas Aquinas''] ᎧᏬᎳᏕᏍᎬ. 147:8 ᏓᏓᏁᎳᏁ ᎧᎵᏗᎳᏏᏗ ᎦᎫᏍᏓᎥ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᎤᏍᏆᏂᎪᏗ argued ᎭᏫᎾᏗᏢ favour ᏙᏯ ᎠᎴᏂᏙᎲ ᎾᏍᎩᏯᎢ ᎠᏣᏗ.</ref>  ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏂᎦᎥ ᎧᏃᎯᏯᏍᏗ ᎾᎿ ᎯᎠ ᎤᏲᏨᎯ [[meat|ᎭᏫᏯ]] ᎾᎿ ᏧᎾᎩᎶᏍᏗ ᎾᎯᏳᎨᏒ [[Lent|ᎠᏯᏔᎵᏍᏔ]] ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎬᎾᏙᏗ ᏙᏯ ᎭᏫᏯ.  <ref>http://www.chowdc.org/Ꭺ/Saunders%202001.html</ref> <ref>Lacoursière, Jacques. ''Une histoire du Québec'' ISBN 2-89448-050-4 ᏕᎪᏏᏏ Ꮎ ᎠᎵᏍᏓᏴᏗ François ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Laval ᎭᏫᎾᏗᏢ ᎯᎠ 17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ posed ᎯᎠ ᎠᏛᏛᎲᏍᎩ ᎯᎠ ᎤᏍᏆᏂᎪᏗ ᎯᎠ Sorbonne, ᎦᎪ ruled ᎭᏫᎾᏗᏢ favor ᎪᎯ ᏧᏚᎪᏔᏅ.</ref>
 
 == 1911 ᎥᎦᏔᎲᎢ ᏓᎵᏍᏛ ==
 [[File:Beavertracks.JPG|thumb|right|150px|ᏙᏯ ᎤᏔᏏᏅᏱ ᎭᏫᎾᏗᏢ ᎤᎾᏥ, ᎭᏫᎾᏗᏢ [[Ontario]]. ᎣᏂᏗᏢ ᎤᏩᏱ approx 20cm ᎦᏅᎯᏓ.]]''ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᏓᎵᏍᏛ ᎨᏒᎢ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᎯᎠ [[Encyclopædia Britannica Eleventh Edition|1911 ᎥᎦᏔᎲᎢ Brittannica]].''
 
 '''ᏙᏯ''', ᎯᎠ ᎤᏔᏂᎢᏍᏗ European aquatic ᏗᎦᎳᏫᎩ ᎯᎠ mammalian ᎠᏓᏅᏍᏗ RODENTIA, ᎠᎯᏗᎨᎢ ᎤᏬᎳᏨ ᎾᎥᎢ Ꮝ ᎡᏆ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ-ᎾᏍᎩᏯᎢ, ᏫᏚᏳᎪᏛ ᎦᏂᏓᏛ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᏂᎬᎾᎥ ᎢᏚᏳᎪᏛ. 
 
-ᎯᎠ ᎧᏁᏨ ᎨᏒᎢ descended ᏂᏛᎴᏅᏓ ᎯᎠ Aryan ᏚᏙᎥ ᎯᎠ ᎦᏂᏝᎢ, cf. ᎢᏳᏕᏘᏴᏓ ''babhru','' ᏬᏗᎨ, ᎯᎠ ᎡᏆ ichneumon, Lat. ''ᎠᏍᏗ ᎪᏢᏔᏅ,'' ᏄᏁᎸᎾ. ''Biber,'' Swed. ''bäver,'' Russ. ''bobr';'' ᎯᎠ ᎤᎾᏍᏕᏢ ''bhru'' ᎤᎭ ᎠᏓᏁᎸ "ᏬᏗᎨ," ᎠᎴ, ᏗᎬᏩᎶᏒ Romanic, "ᏬᏗᎨ" ᎠᎴ "ᎦᎶᏂᏗ."
+ᎯᎠ ᎧᏁᏨ ᎨᏒᎢ descended ᏂᏛᎴᏅᏓ ᎯᎠ Aryan ᏚᏙᎥ ᎯᎠ ᎦᏂᏝᎢ, cf. Sanskrit ''babhru's,'' (ᏬᏗᎨ), ᎯᎠ ᎡᏆ ichneumon, [[Latin language|ᎳᏗᎾ ᎦᏬᏂᎯᏍᏗ]] ''fiber'', [[German|ᎠᏂᏓᏥ ᎦᏬᏂᎯᏍᏗ]] ''Biber,'' [[Swedish|ᎠᏂᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ]] ''bäver,'' [[Russian|ᏲᏂᎢ ᎦᏬᏂᎯᏍᏗ]] ''bobr';'' ᎯᎠ ᎤᎾᏍᏕᏢ ''bhru'' ᎤᎭ ᎠᏓᏁᎸ "ᏬᏗᎨ", ᎠᎴ, ᏗᎬᏩᎶᏒ Romanic, "ᏬᏗᎨ-ᎢᏳᏍᏗ" ᎠᎴ "ᎦᎶᏂᏗ."
 
 ᎯᎠ ᎤᏙᎯᏳ ᏙᏯ (''ᎫᏢᎥᏍᎬ ᎠᏍᏗ ᎪᏢᏔᏅ'') ᎨᏒᎢ ᎾᏰᎯᏯ [[Europe|ᏳᎳᏛ]] ᎠᎴ ᎤᏴᏢ ᎢᏗᏢ Asia, ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᏄᏓᏛᏁᎸᎩ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᎾᎥᎢ ᎾᎥᏂᎨᎢ-ᏚᎾᏓᏚᏓᎸ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ (''C. canadensis''), ᏭᏂᎬᏫᏳᏒ ᎠᏥᎸᏉᏗ ᎾᎥᎢ ᎯᎠ ᎤᏙᏢᏒ ᎯᎠ ᎧᏁᎬ ᎤᏲᏴᎬ ᎤᎵᏬᏨᎯ ᎯᎠ ᎣᏓᏅᏛ. 
 [[File:Beaver dam in Yellowstone.jpg|thumb|left|250px|[[Yellowstone National Park|Yellowstone ᎬᎾᏕᎾ ᎠᏣᏪᏐᎸᏍᏙᏗ]].]]
-ᏙᏯ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᏚᎾᏓᏚᏓᎸ ᎯᎠ [[squirrel|ᏌᎶᎵ]](Sciuridae), ᏗᏙᎳᎩ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ ᎢᎦᏛ ᎯᎠ ᎡᎳᏗᎨ ᎠᏳᎨᏂ ᎠᎴ ᎣᏓᏅᏛ. ᎭᏫᎾᏗᏢ ᎯᎠ Sciuridae ᎯᎠ ᏔᎵ ᏄᎬᏫᏳᏒ ᎤᎵᏬᏨᎯ (tibia ᎠᎴ fibula) ᎯᎠ ᎡᎳᏗᎨ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᎦᏅᏍᎨᏂ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏓᎴᎿᎢ, ᎯᎠ ᎦᏂᏓᏛ ᎨᏒᎢ ᎦᏌᏆᎸ ᎠᎴ ᎤᏭᏯᏛ, ᎠᎴ ᎯᎠ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ ᎠᎴ arboreal ᎠᎴ ᎡᎶᎯ. ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᏯ ᎠᎴ Castoridae ᎾᏍᎩ ᎯᎠ ᎤᎵᏬᏨᎯ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏍᏚᏗ ᏚᏓᏂᏴᏒ ᎾᎾᎢ ᎤᎾᏤᎵ ᎡᎳᏗᎨ ᏚᎵᏍᏛ, ᎯᎠ ᎦᏂᏓᏛ ᎨᏒᎢ ᎧᏂᎬᎾᎥ, ᎤᏂᎪᏗᏗ ᎠᎴ ᏫᏚᏳᎪᏛ, ᎠᎴ ᎯᎠ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ ᎠᎴ aquatic. 
+ᏙᏯ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᏚᎾᏓᏚᏓᎸ ᎯᎠ [[squirrel|ᏌᎶᎵ]] (Sciuridae), ᏗᏙᎳᎩ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ ᎢᎦᏛ ᎯᎠ ᎡᎳᏗᎨ ᎠᏳᎨᏂ ᎠᎴ ᎣᏓᏅᏛ. ᎭᏫᎾᏗᏢ ᎯᎠ Sciuridae ᎯᎠ ᏔᎵ ᏄᎬᏫᏳᏒ ᎤᎵᏬᏨᎯ (tibia ᎠᎴ fibula) ᎯᎠ ᎡᎳᏗᎨ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᎦᏅᏍᎨᏂ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏓᎴᎿᎢ, ᎯᎠ ᎦᏂᏓᏛ ᎨᏒᎢ ᎦᏌᏆᎸ ᎠᎴ ᎤᏭᏯᏛ, ᎠᎴ ᎯᎠ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ ᎠᎴ arboreal ᎠᎴ ᎡᎶᎯ. ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᏯ ᎠᎴ Castoridae ᎾᏍᎩ ᎯᎠ ᎤᎵᏬᏨᎯ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏍᏚᏗ ᏚᏓᏂᏴᏒ ᎾᎾᎢ ᎤᎾᏤᎵ ᎡᎳᏗᎨ ᏚᎵᏍᏛ, ᎯᎠ ᎦᏂᏓᏛ ᎨᏒᎢ ᎧᏂᎬᎾᎥ, ᎤᏂᎪᏗᏗ ᎠᎴ ᏫᏚᏳᎪᏛ, ᎠᎴ ᎯᎠ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ ᎠᎴ aquatic. 
 
 [[File:Beaver dam in Tierra del Fuego.jpg|thumb|250px|[[Tierra del Fuego]].]]
 
 ᏙᏯ ᎤᎭ webbed ᎣᏂᏗᏢ-ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎯᎠ ᎠᎩᏍᎬᎢ ᎯᎠ ᏔᎵᏁ ᎣᏂᏗᏢ-ᎧᎾᏌᏛ ᏔᎵ ᎢᏳᏩᎫᏘ. ᎤᏅᏌ ᎤᎭ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎪᏩᏛᏗ, ᎠᎴ ᎤᎩᏌᏛ ᎤᏓᏅᏖᏗ ᎠᏛᎩᏍᎬ, ᎦᏩᏒᎬ, ᎠᎴ ᎠᏒᎾᏍᏗ.
 
-ᎭᏫᎾᏗᏢ ᏂᎦᏅᎯᏒ ᏙᏯ–European ᎠᎴ ᏴᏩᏁᎬ--ᎠᏟᎶᏍᏗ ᎬᏩᏚᏫᏛ 2 ft. ᎬᏫᏍᏓᏗ ᎯᎠ ᎦᏂᏓᏛ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎬᏩᏚᏫᏛ 10 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ. ᎤᏅᏌ ᎠᎴ ᎫᏝᎢ ᎬᏙᏗ ᎤᏭᏯᏔᏅ ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᏥᏚᎬ ᎤᎾᏤᎵ ᎤᎬᏫᏳᎯ ᎠᏓᎾᏅᏗ ᏧᎬᏩᎶᏗ; ᎪᎯ ᎤᎾᏠᏯᏍᏗ ᏔᎵ ᏧᏓᎴᏅᏓ ᎤᏍᏗᏰᎬ--ᎯᎠ ᏌᏊ ᎠᏍᏚᏗ-ᎠᏫᏒᏗ, ᎦᎶᏂᏗ ᎠᎴ greyish colour, ᎯᎠ ᏐᎢ ᎤᏣᏘ coarser ᎠᎴ ᎦᏅᎯᏓᎨ, ᎠᎴ ᎩᎦᎨ ᏬᏗᎨ. 
+ᎭᏫᎾᏗᏢ ᏂᎦᏅᎯᏒ ᏙᏯ–European ᎠᎴ ᏴᏩᏁᎬ—ᎠᏟᎶᏍᏗ ᎬᏩᏚᏫᏛ 2 ft. ᎬᏫᏍᏓᏗ ᎯᎠ ᎦᏂᏓᏛ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎬᏩᏚᏫᏛ 10 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ. ᎤᏅᏌ ᎠᎴ ᎫᏝᎢ ᎬᏙᏗ ᎤᏭᏯᏔᏅ ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᏥᏚᎬ ᎤᎾᏤᎵ ᎤᎬᏫᏳᎯ ᎠᏓᎾᏅᏗ ᏧᎬᏩᎶᏗ; ᎪᎯ ᎤᎾᏠᏯᏍᏗ ᏔᎵ ᏧᏓᎴᏅᏓ ᎤᏍᏗᏰᎬ—ᎯᎠ ᏌᏊ ᎠᏍᏚᏗ-ᎠᏫᏒᏗ, ᎦᎶᏂᏗ ᎠᎴ [[greyish|ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎢᏳᏍᏗ]] [[color|ᏗᎧᏃᏗ]], ᎯᎠ ᏐᎢ ᎤᏣᏘ coarser ᎠᎴ ᎦᏅᎯᏓᎨ, ᎠᎴ ᎩᎦᎨ ᏬᏗᎨ. 
 
-ᏙᏯ ᎠᎴ ᎠᏏᏴᏫ aquatic ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ, ᎥᏝ travelling ᎾᎥᎢ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎤᏱᎵᏒᎩ ᎾᎥᎢ ᎤᏚᎳᏗ. ᏧᏩᎦᏔᏅᏍ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ England, ᎯᎠ European ᏙᏯ ᎤᎭ 
+ᏙᏯ ᎠᎴ ᎠᏏᏴᏫ aquatic ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ, ᎥᏝ traveling ᎾᎥᎢ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎤᏱᎵᏒᎩ ᎾᎥᎢ ᎤᏚᎳᏗ. ᏧᏩᎦᏔᏅᏍ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ [[ᎡᎵᏏᎯ]], ᎯᎠ European ᏙᏯ ᎤᎭ 
 ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᏭᏪᏙᎢ exterminated ᎾᎿᎢ, ᎠᎴ ᎾᏍᎩᏯᎢᎨᏙᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎯᎠ ᎡᏆ ᎦᏙᎯ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎦᏲᎵ ᏂᎦᏰᏙᎲ ᎾᎿ ᎯᎠ [[Elbe]], ᎯᎠ [[Rhone River|Rhone]] ᎠᎴ ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ Scandinavia. ᎯᎠ ᏴᏩᏁᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ 
 ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵ ᎡᏆᏯ ᎠᏂᎦᏲᎵ ᎭᏫᎾᏗᏢ ᏗᏎᏍᏗ ᏂᏛᎴᏅᏓ ᏗᏍᏆᎸᏙᏗ ᎤᎾᏄᎪᎢᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮝ ᏧᎬᏩᎶᏗᏯ ᎤᏭᏯᏔᏅ. 
 
-ᏙᏯ ᎠᎴ ᎤᏍᏗ ᏓᏆᎴᎷ ᎡᎿᎢ ᎡᎥ, ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎤᏪᏴᎢ, ᎭᏢᏃ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏥᏄᏍᏗ ᎢᏯᏓᏛᏁᏗ ᎯᎠ ᎠᎹ ᏰᎵᏊ ᎤᏒᏙᏂ, ᎤᏅᏌ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎠᏓᎦᏴᎵᎨ tlawotu ᎠᎴ ᎯᎠ ᎤᏩᏂᎦᎸ ᎠᎴ ᎤᏩᏂᎦᎸ ᏕᏡᎬ felled ᎾᎥᎢ ᎤᎾᏤᎵ ᎤᎳᏂᎩᏛ incisor ᏕᎦᏅᏙᎬ. ᎭᏫᎾᏗᏢ ᎯᎠ neighbourhood ᎤᏅᏌ ᎪᏢᏗ ᎤᎾᏤᎵ "ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ," ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏜᏅᏛ ᎠᏥᎾᏝᎢ, ᎬᏙᏗ ᎯᎠ ᎠᏴᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ. ᎯᎠ tlawotu ᎨᏒᎢ plastered ᎡᎳᏗ ᎾᎥᎢ ᎯᎠ ᎠᎬᏱᏗᏢ-ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ, ᏥᏄᏍᏗ ᎢᏳᏓᎵᎭ ᏄᏪᎵᏒ, ᎾᎥᎢ ᎯᎠ ᎦᏂᏓᏛ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏥᎾᏝᎢ ᎠᎳᏑᎶ ᎦᎵᏍᏜᎥ ᏥᏄᏍᏗ ᎢᏚᏳᎪᏛ. 
+ᏙᏯ ᎠᎴ ᎤᏍᏗ ᏓᏆᎴᎷ ᎡᎿᎢ ᎡᎥ, ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎤᏪᏴᎢ, ᎭᏢᏃ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏥᏄᏍᏗ ᎢᏯᏓᏛᏁᏗ ᎯᎠ ᎠᎹ ᏰᎵᏊ ᎤᏒᏙᏂ, ᎤᏅᏌ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎠᏓᎦᏴᎵᎨ [[mud|ᏝᏬᏚ]] ᎠᎴ ᎯᎠ ᎤᏩᏂᎦᎸ ᎠᎴ ᎤᏩᏂᎦᎸ ᏕᏡᎬ felled ᎾᎥᎢ ᎤᎾᏤᎵ ᎤᎳᏂᎩᏛ incisor ᏕᎦᏅᏙᎬ. ᎭᏫᎾᏗᏢ ᎯᎠ neighborhood ᎤᏅᏌ ᎪᏢᏗ ᎤᎾᏤᎵ "ᎤᏕᎵᏛ ᎤᎾᎵᎪᎯ," ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏜᏅᏛ ᎠᏥᎾᏝᎢ, ᎬᏙᏗ ᎯᎠ ᎠᏴᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ. ᎯᎠ [[mud|ᏝᏬᏚ]] ᎨᏒᎢ plastered ᎡᎳᏗ ᎾᎥᎢ ᎯᎠ ᎠᎬᏱᏗᏢ-ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ, ᏥᏄᏍᏗ ᎢᏳᏓᎵᎭ ᏄᏪᎵᏒ, ᎾᎥᎢ ᎯᎠ ᎦᏂᏓᏛ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏥᎾᏝᎢ ᎠᎳᏑᎶ ᎦᎵᏍᏜᎥ ᏥᏄᏍᏗ ᎢᏚᏳᎪᏛ. 
 
-ᎤᏅᏌ ᎠᎴ ᎠᎬᏫᏳᏛ ᏒᎯᏰᏱ, ᎠᎴ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᏭᏂᎬᏫᏳᏒ ᎾᎿ ᎤᏯᎸ ᎠᎴ ᎢᎦᏛ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᎠᎹ digakohidi. 
+ᎤᏅᏌ ᎠᎴ ᎠᎬᏫᏳᏛ ᏒᎯᏰᏱ, ᎠᎴ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᏭᏂᎬᏫᏳᏒ ᎾᎿ ᎤᏯᎸ ᎠᎴ ᎢᎦᏛ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᎠᎹ [[plants|ᏗᎦᎪᎯᏗ]]. 
 
 [[File:Beaver_dam_in_Fossil_Butte_NM-750px.JPG|thumb|left|250px|[[Fossil Butte National Monument|ᎢᏳᏕᏘᏴᏓ ᏂᎦᏛᎢ ᎬᎾᏕᎾ ᏂᎦᏛᎢ]].]]
-ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᏚᏓᎴᎿᎥ ᎭᏫᎾᏗᏢ ᎤᏙᏢᏒᎢ ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎾᏍᎩᎾ localities. ᎭᏢᏃ ᎯᎠ ᎠᎹ ᎤᎭ ᎤᏍᏗ ᎠᏌᎳᏙᏗ ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ ᎦᏥᏃᏍᏛ; ᎭᏢᏃ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎨᏒᎢ ᎤᎪᏗ ᎾᏍᎩ ᎨᏒᎢ ᎠᎷᏚᎧᏘ, ᎬᏙᏗ Ꮝ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏫᏂᏚᏳᎪᏛ ᎯᎠ ᎤᏪᏴᎢ. ᎯᎠ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᎪᏢᏅᎯ ᎬᏙᏗ ᎠᎴ [[driftwood]], [[willow|ᎢᏤ ᎢᏳᏍᏗ ᏕᎴᎦᎵᏍ]], [[birch|ᎣᏍᏛᏗᏍᏗ]] ᎠᎴ poplars; ᎾᏍᎩ ᎾᏍᏇ tlawotu ᎠᎴ ᎠᏂᏅᏯ intermixed ᎭᏫᎾᏗᏢ ᏯᏛᎿ ᏄᏍᏛᎢ ᏥᏄᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏄᎵᏂᎬᎬ ᎯᎠ ᎠᏓᎦᏴᎵᎨ; ᎠᎴ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎾᏍᎩᎾ ᎢᎬᎾᏗ ᎠᎦᏎᏍᏔᏅ, ᎾᏍᎩ ᎤᏩᏒ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎨᏒᎢ ᎠᏫᏛᏓ ᎾᎿ ᎬᏙᏗ ᎤᏠᏱᎭ ᎬᏃᏌᏍᏗ, ᎠᎴ Ꮎ ᏂᎦᏛ ᎯᎠ ᎢᎦᏛᎭ ᎠᎴ ᎪᏢᏅᎯ ᎢᏗᎦᏗ ᏄᎵᏂᎬᎬ.
+ᎯᎠ ᎠᏓᎦᏴᎵᎨ ᏚᏓᎴᎿᎥ ᎭᏫᎾᏗᏢ ᎤᏙᏢᏒᎢ ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎾᏍᎩᎾ localities. ᎭᏢᏃ ᎯᎠ ᎠᎹ ᎤᎭ ᎤᏍᏗ ᎠᏌᎳᏙᏗ ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ ᎦᏥᏃᏍᏛ; ᎭᏢᏃ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎨᏒᎢ ᎤᎪᏗ ᎾᏍᎩ ᎨᏒᎢ ᎠᎷᏚᎧᏘ, ᎬᏙᏗ Ꮝ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏫᏂᏚᏳᎪᏛ ᎯᎠ ᎤᏪᏴᎢ. ᎯᎠ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᎪᏢᏅᎯ ᎬᏙᏗ ᎠᎴ [[driftwood]], [[willow|ᎢᏤ ᎢᏳᏍᏗ ᏕᎴᎦᎵᏍ]], [[birch|ᎣᏍᏛᏗᏍᏗ]] ᎠᎴ poplars; ᎾᏍᎩ ᎾᏍᏇ [[mud|ᏝᏬᏚ]] ᎠᎴ ᎠᏂᏅᏯ intermixed ᎭᏫᎾᏗᏢ ᏯᏛᎿ ᏄᏍᏛᎢ ᏥᏄᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏄᎵᏂᎬᎬ ᎯᎠ ᎠᏓᎦᏴᎵᎨ; ᎠᎴ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎾᏍᎩᎾ ᎢᎬᎾᏗ ᎠᎦᏎᏍᏔᏅ, ᎾᏍᎩ ᎤᏩᏒ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎨᏒᎢ ᎠᏫᏛᏓ ᎾᎿ ᎬᏙᏗ ᎤᏠᏱᎭ ᎬᏃᏌᏍᏗ, ᎠᎴ Ꮎ ᏂᎦᏛ ᎯᎠ ᎢᎦᏛᎭ ᎠᎴ ᎪᏢᏅᎯ ᎢᏗᎦᏗ ᏄᎵᏂᎬᎬ.
 
 "ᎭᏫᎾᏗᏢ ᏚᏙᏢᏒᎢ," ᎪᏪᎵᎠ Hearne, "ᎦᏙ ᎤᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎦᏅᎯᏓ frequented ᎾᎥᎢ ᏙᏯ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎤᎾᏤᎵ ᎠᏓᎦᏴᎵᎨ, ᎾᎥᎢ ᎢᏳᏓᎵ ᎪᏢᎯᏏᏍᎬ, ᏗᏙᎳᎩ ᎠᎧᎵᏬᎯ ᎠᏕᎸ ᏗᏗ, ᏰᎵᏇ ᎢᎬᏁᏗ ᏄᎵᏂᎬᎬ ᎡᏆ ᎦᏌᏙᏯᏍᏗ ᎢᏧᎳ ᎤᏁᏍᏓᎳ ᎠᎴ ᎠᎹ; ᎠᎴ ᏥᏄᏍᏗ ᎯᎠ ᏕᎴᎦᎵᏍ, poplar ᎠᎴ ᎣᏍᏛᏗᏍᏗ ᏂᎦᎥᏊ ᎠᎩᏍᏗ ᎤᎾᏍᏕᏢ ᎠᎴ ᏗᏍᏓᏲᏍᏗ ᎦᎸᎳᏗᏢ, ᎤᏅᏌ ᎾᎥᎢ ᎢᎦᎢ ᎢᏗᎦᏘ ᎤᏙᏢᏒ ᎤᏓᏅᏗ ᎤᏠᏱᎭ ᎦᎧᏅ ᎥᏓᏓᎫᏴᎡᏗᏱ, ᎦᏙ ᎤᏍᏗ ᎠᏯ ᎤᎭ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏚᏙᏢᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏅ ᎢᎦᏘ Ꮎ ᎯᎸᏍᎩ ᏥᏍᏆ ᎤᎭ ᎤᏁᏍᎨᎲ ᎤᎾᏤᎵ ᎤᏁᏍᎩᎸᏒ ᏄᎾᏛᏅ ᎯᎠ ᏚᏩᏂᎦᎸ."
 
-ᎤᎾᏤᎵ ᏗᎦᎵᏦᏗ ᎠᎴ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎯᎠ ᎤᏠᏱ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᏥᏄᏍᏗ ᎯᎠ ᎠᏓᎦᏴᎵᎨ, ᎬᏙᏗ ᎤᏍᏗ ᎠᏓᏅᏍᏗ ᎠᎴ ᏗᏙᎳᎩ ᎠᏛᎯᏍᏙᏗ, ᎠᎴ ᎢᏳᏓᎵᎭ ᎢᎦᎢ ᎨᏒ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏅᎩ ᎠᎦᏴᎵ, ᎠᎴ ᏑᏓᎵ ᎠᎴ ᏧᏁᎳ ᎠᏲᎵ ᏙᏯ. ᎾᏍᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏓᎵᎭ ᏥᏄᎵᏍᏔᏅ Ꮎ ᎢᎦᏛ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᏗᎦᎵᏦᏗ ᎤᎭ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎢᎦᏛ, ᎠᎴ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎨᏛᎢ ᎯᎠ ᏄᎬᏫᏳᏒ ᎠᏓᏁᎸ ᎠᎦᏍᎦᏂ ᎾᎥᎢ ᎯᎠ ᎠᏁᏍᎨᏍᎩ ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᎦᏦᏔ, ᎾᏍᎩᎾᎢ ᎯᎠ ᏕᎧᏅᏑᎸ ᎤᎭ ᎤᏠᏱᎭ Ꮭ ᏗᏛᎪᏔᏅ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎾᏍᎩ ᎤᏩᏒ ᎾᎥᎢ ᎠᎹ. 
+ᎤᎾᏤᎵ ᏗᎦᎵᏦᏗ ᎠᎴ ᎪᏢᎯ ᎢᎬᏁᎸᎯ ᎯᎠ ᎤᏠᏱ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᏥᏄᏍᏗ ᎯᎠ ᎠᏓᎦᏴᎵᎨ, ᎬᏙᏗ ᎤᏍᏗ ᎠᏓᏅᏍᏗ ᎠᎴ ᏗᏙᎳᎩ ᎠᏛᎯᏍᏙᏗ, ᎠᎴ ᎢᏳᏓᎵᎭ ᎢᎦᎢ ᎨᏒ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏅᎩ ᎠᎦᏴᎵ, ᎠᎴ ᏑᏓᎵ ᎠᎴ ᏧᏁᎳ ᎠᏲᎵ ᏙᏯ. ᎾᏍᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏓᎵᎭ ᏥᏄᎵᏍᏔᏅ Ꮎ ᎢᎦᏛ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᏗᎦᎵᏦᏗ ᎤᎭ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎢᎦᏛ, ᎠᎴ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎨᏛᎢ ᎯᎠ ᏄᎬᏫᏳᏒ ᎠᏓᏁᎸ ᎠᎦᏍᎦᏂ ᎾᎥᎢ ᎯᎠ ᎠᏁᏍᎨᏍᎩ ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᎦᏦᏔ, ᎾᏍᎩᎾᎢ ᎯᎠ ᏕᎧᏅᏑᎸ ᎤᎭ ᎤᏠᏱᎭ Ꮭ ᏗᏛᎪᏔᏅ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎾᏍᎩ ᎤᏩᏒ ᎾᎥᎢ ᎠᎹ. 
 
 [[File:BeaverDam 8409.jpg|thumb|right|300px|[[Lassen Volcanic National Park|Lassen ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᎬᎾᏕᎾ ᎠᏣᏪᏐᎸᏍᏙᏗ]].]]
 
-ᎯᎠ ᏙᏯ ᎠᏫᏛᏗ ᎯᎠ tlawotu ᎠᎴ ᎠᏂᏅᏯ ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᎬᏱᏗᏢ-ᎤᏩᏱ ᎠᎴ ᎯᎠ ᎠᏙᎯ ᎠᏰᎵ ᎤᎾᏤᎵ ᏕᎦᏅᏙᎬ. ᎤᏅᏌ ᏂᎪᎯᎸᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏒᏃᏱ ᎠᎴ ᎬᏙᏗ ᎡᏆ ᎥᎢᏒᎢ. ᎤᏅᏌ ᎫᏢᏗ ᎤᎾᏤᎵ ᏗᎦᎵᏦᏗ ᎣᏂᏱᏳ ᏂᎦᎥᎢ ᎤᎳᎪᎲᏍᏗ ᎬᏙᏗ ᎢᏤᎢ tlawotu, ᎦᏙ ᎤᏍᏗ, ᎤᏴᏢ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᏯᏨᏒ ᏗᏫᏒᏗ ᎭᏫᎾᏗᏢ, ᏗᏙᎳᎩ ᎾᎥᏂᎨᏍᏗ ᏥᏄᏍᏗ ᎠᏍᏓᏯ ᏥᏄᏍᏗ ᏅᏯ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎥᏝ ᎢᏳᏍᏗ [[wolf|ᎠᏂᏩᏯ]] ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ [[wolverine]]ᏰᎵᏇ ᎠᏓᏕᏯᏙᏗ ᎤᎾᏤᎵ ᎠᏣᏪᏐᎸᏍᏙᏗ.
+ᎯᎠ ᏙᏯ ᎠᏫᏛᏗ ᎯᎠ [[mud|ᏝᏬᏚ]] ᎠᎴ ᎠᏂᏅᏯ ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᎬᏱᏗᏢ-ᎤᏩᏱ ᎠᎴ ᎯᎠ ᎠᏙᎯ ᎠᏰᎵ ᎤᎾᏤᎵ ᏕᎦᏅᏙᎬ. ᎤᏅᏌ ᏂᎪᎯᎸᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏒᏃᏱ ᎠᎴ ᎬᏙᏗ ᎡᏆ ᎥᎢᏒᎢ. ᎤᏅᏌ ᎫᏢᏗ ᎤᎾᏤᎵ ᏗᎦᎵᏦᏗ ᎣᏂᏱᏳ ᏂᎦᎥᎢ ᎤᎳᎪᎲᏍᏗ ᎬᏙᏗ ᎢᏤᎢ [[mud|ᏝᏬᏚ]], ᎦᏙ ᎤᏍᏗ, ᎤᏴᏢ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᏯᏨᏒ ᏗᏫᏒᏗ ᎭᏫᎾᏗᏢ, ᏗᏙᎳᎩ ᎾᎥᏂᎨᏍᏗ ᏥᏄᏍᏗ ᎠᏍᏓᏯ ᏥᏄᏍᏗ ᏅᏯ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎥᏝ ᎢᏳᏍᏗ [[wolf|ᎠᏂᏩᏯ]] ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ [[wolverine]] ᏰᎵᏇ ᎠᏓᏕᏯᏙᏗ ᎤᎾᏤᎵ ᎠᏣᏪᏐᎸᏍᏙᏗ.
 
-ᎯᎠ favourite ᎠᎵᏍᏓᏴᏗ ᎯᎠ ᏴᏩᏁᎬ ᏙᏯ ᎨᏒᎢ ᎯᎠ ᎠᎹ-ᎤᎾᏥ (''[[Nuphar luteum]]''), ᎦᏙ ᎤᏍᏗ ᎯᎸᏍᎩ ᏲᏅ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[cabbage|ᏧᏆᏅᏕᎾ]]-ᎥᎢᏒᎢ, ᎠᎴ ᎠᏛᏍᎦ ᎾᎾᎢ ᎯᎠ ᎭᏫᏂ ᎥᏓᎵ ᎠᎴ ᎤᏪᏴ. ᏙᏯ ᎾᏍᎩ ᎾᏍᏇ ᎠᏍᎦᎳᏍᏗ ᎯᎠ ᎤᏯᎸ [[birch|ᎣᏍᏛᏗᏍᏗ]], [[poplar]] ᎠᎴ [[willow|ᏕᎴᎦᎵᏍ]] ᏕᏡᎬ; ᎠᎴ ᎾᎯᏳᎨᏒ ᎯᎠ ᎪᎨᏱ ᎤᏟ ᎢᎦᎢ ᏚᏟᎶᏍᏔᏅ ᎦᎪᏘ, ᎬᏙᏗ ᎯᎠ ᎦᏟᏐᏗᎩ berries, ᎨᏒᎢ consumed. 
+ᎯᎠ favorite ᎠᎵᏍᏓᏴᏗ ᎯᎠ ᏴᏩᏁᎬ ᏙᏯ ᎨᏒᎢ ᎯᎠ ᎠᎹ-ᎤᎾᏥ (''[[Nuphar luteum]]''), ᎦᏙ ᎤᏍᏗ ᎯᎸᏍᎩ ᏲᏅ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[cabbage|ᏧᏆᏅᏕᎾ]]-ᎥᎢᏒᎢ, ᎠᎴ ᎠᏛᏍᎦ ᎾᎾᎢ ᎯᎠ ᎭᏫᏂ ᎥᏓᎵ ᎠᎴ ᎤᏪᏴ. ᏙᏯ ᎾᏍᎩ ᎾᏍᏇ ᎠᏍᎦᎳᏍᏗ ᎯᎠ ᎤᏯᎸ [[birch|ᎣᏍᏛᏗᏍᏗ]], [[poplar]] ᎠᎴ [[willow|ᏕᎴᎦᎵᏍ]] ᏕᏡᎬ; ᎠᎴ ᎾᎯᏳᎨᏒ ᎯᎠ ᎪᎨᏱ ᎤᏟ ᎢᎦᎢ ᏚᏟᎶᏍᏔᏅ ᎦᎪᏘ, ᎬᏙᏗ ᎯᎠ ᎦᏟᏐᏗᎩ berries, ᎨᏒᎢ consumed. 
 
 ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᏁᏍᏓᎳ ᏧᎵ ᏍᏆᎵᏓ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎠᎹ ᎦᏄᎪᎬ ᎤᏅᏌ ᏂᎪᎯᎸᎢ ᎠᏓᏅᏍᏗ ᎤᎾᏤᎵ ᎦᏁᎸ, ᎠᎴ ᎥᎢᏒᎢ ᎬᏩᏚᏫᏛ ᎢᏳᏩᎪᏗ ᎤᏍᏗ ᎤᏓᎷᎸ ᎯᎠ ᎤᎶᏒᎩ ᎯᎠ ᎤᎦᎶᎬ, ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᎥᎦᎷᏨ ᎤᎾᏤᎵ ᎠᎦᏴᎵ ᎦᎷᎯᏍᏗ, ᎠᎴ ᎠᏠᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎪᎳ ᎤᏂᎲ ᏧᎬᏩᎶᏗ ᎠᏓ. ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎠᎴᏅᏗ ᎪᏢᎯᏐᏗ ᎯᎠ ᏗᎦᎵᏦᏗ ᎩᎳ ᎯᎠ ᎤᏯᏨᏒ ᏗᏫᏒᏗ ᎭᏫᎾᏗᏢ, ᎠᎴ ᎥᏝ ᎠᏍᏆᏗᏍᏗ ᎯᎠ outer ᎠᏰᎵ ᎩᎳ ᎯᎠ ᎤᏴᏢ ᏗᏙᎳᎩ ᎤᎶᏒᏍᏔᏅᎯ. ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᎠᏁᏍᎦᏗ ᎢᏤ ᎦᎷᎯᏍᏗ ᎤᏅᏌ ᎤᏅᏨᎩ ᎯᎠ ᎠᏓ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎪᎨᏱ, ᎠᎴ ᎢᏳᏓᎵᎭ ᎠᎴᏅᏗ ᎠᏓᏁᎸ ᎩᎳ ᏫᏂᏚᏳᎪᏛ ᎯᎠ ᎤᎵᏍᏛ ᎦᎶᏂ.
 
 Castoreum ᎨᏒᎢ ᏗᎧᏃᏗ ᎢᎦᎢ ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᏔᎵ ᏗᎦᏛᏗ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ pouches ᎾᎿ ᎨᏒ ᎾᎥᏂᎨ ᎯᎠ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᏗᏟᎶᏍᏔᏅ, ᎤᏴᏍᏗ ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ foetid odor, ᎾᎾᎢ ᏌᏊ ᎢᏳᏩᎪᏗ ᎡᏆᏯ ᎠᏥᎾᏝᎢ ᏥᏄᏍᏗ ᏅᏬᏘ, ᎠᎴ ᎾᏊ ᎬᏔᏅᎯ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ [[perfume|ᎠᎵᏍᏚᏟᏍᏗry]].
 
-ᎢᏳᏕᏘᏴᏓ ᎤᎾᎵᏃᎯᏴᎯ ᏙᏯ ᎠᎴ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᏛᏙᏗ ᎠᎴ ᏐᎢ ᎤᏍᏔᎳᎾᎵ ᏚᏂᏍᏆᏂᎪᏛ England ᎠᎴ ᎯᎠ ᎡᏆ ᎦᏙᎯ [[Europe|ᏳᎳᏛ]]; ᎾᎯᏳᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[Pleistocene]] ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ England ᎠᎴ ᎤᏴᏢ ᏄᎵᏍᏔᏅ ᎤᎾᎵᏃᎯᏴᎯ ᏂᎬᎢ ᎠᎧᎵᏏᏐᏗ ᏙᏯ, ''Trogontherium cuvieri'', ᎾᏓᏛᏁᎲ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎥᎢ ᎤᏩᏌᏊ.
-{{Commons|Castor|Beaver}}
+ᎢᏳᏕᏘᏴᏓ ᎤᎾᎵᏃᎯᏴᎯ ᏙᏯ ᎠᎴ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᏛᏙᏗ ᎠᎴ ᏐᎢ ᎤᏍᏔᎳᎾᎵ ᏚᏂᏍᏆᏂᎪᏛ [[England|ᎡᎵᏏᎯ]] ᎠᎴ ᎯᎠ ᎡᏆ ᎦᏙᎯ [[Europe|ᏳᎳᏛ]]; ᎾᎯᏳᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[Pleistocene]] ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎡᎵᏏᎯ ᎠᎴ ᎤᏴᏢ ᏄᎵᏍᏔᏅ ᎤᎾᎵᏃᎯᏴᎯ ᏂᎬᎢ ᎠᎧᎵᏏᏐᏗ ᏙᏯ, ''Trogontherium cuvieri'', ᎾᏓᏛᏁᎲ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎥᎢ ᎤᏩᏌᏊ.
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ==
-<references/>
+{{reflist}}
 
 == ᏫᏓᏎᎸᎢ ==
 * [http://www.itis.usda.gov/servlet/SingleRpt/SingleRpt?search_topic=TSN&search_value=180211 ITIS 180211] 2002-12-14
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-* [http://www.aigas.co.uk/beavers-g.asp European beaver watching site at Aigas, Scotland]
-* [http://www.BeaversWW.org Beavers: Wetlands & Wildlife website]
+{{Commons|Castor|Beaver}}
+::* [http://www.aigas.co.uk/beavers-g.asp European beaver watching site at Aigas, Scotland]
+::* [http://www.BeaversWW.org Beavers: Wetlands & Wildlife website]
 * [http://www.geocities.com/bobarnebeck/BeaveReality.htm Bob Arnebeck's beaver observation site] 
 * [http://www.ecology.info/beaver-ecology.htm Ecology of the Beaver] 
 * [http://www.cgkids.ca/cgkids/animal/2005_01_beaver.asp Animal fact sheets] [[Canadian Geographic|ᎧᎾᏓ Geographic]] ᎠᏫ ᎠᎩᎾ
 * [http://www.pch.gc.ca/progs/cpsc-ccsp/sc-cs/o1_e.cfm [[Canadian|ᎧᎾᏓ]] Heritage - the beaver as a national symbol]
 * [http://www.scotsbeavers.org A website about reintroducing the beaver to Scotland]
 * [http://purl.galileo.usg.edu/ugafax/QL737xR6xD84 The romance of the beaver;] ᎠᎴᏂᏙᎲ ᎯᎠ ᎧᏃᎮᏍᎩ ᎯᎠ ᏙᏯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏭᏕᎵᎬᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎾᎥᎢ . Radclyffe Dugmore. ᏚᏟᎶᏍᏔᏅ ᎬᏙᏗ ᏗᎨᎦᏟᎶᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎥᎴᏂᏙᎲ ᎠᎴ ᏓᎾᏎᏍᎬ ᎾᎥᎢ ᎯᎠ ᎪᏪᎵ Ꭺgoweli gowlisgi. ᏗᎦᎴᏴᏗᏍᎩ: Philadelphia, J.B. Lippincott ᎤᎾᏓᏡᎩ; London, W. Heinemann 1914 ''(searchable ᎢᏗᎦᏘᎭ ᎾᎾᎢ ᎯᎠ ᏗᏕᎶᏆᏍᏗ Georgia Libraries)'' 
-{{1911}}
 
 [[Category:Animalia]]
 
