--- a/ᎠᏂᏍᏫᏗ_ᎦᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᏍᏫᏗ_ᎦᏬᏂᎯᏍᏗ.mw
@@ -16,6 +16,9 @@
 | damer
 |-
 |}
+
+[[File:Nya Testamentet Karl XII Bibel 1778.jpg|thumb|left|ᎠᏂᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ [[New Testament|ᎢᏤ ᎧᏃᎮᏛ]], Karl XII [[Bible|ᏗᎦᎸᏉᏗ ᏗᎪᏪᎵ]], 1778]]
+{{clear}}
 {{stub}}
 
 [[Category:ᏳᎳᏛ]]
