--- a/ᎪᏢᏅ.mw
+++ b/ᎪᏢᏅ.mw
@@ -54,8 +54,8 @@
 
 == ᏗᏍᏆᎸᏙᏗ ==
 
-[[File:DRFButter.jpg|thumb| ᏒᏙᏂ ᏗᎬᎩᎶᏍᏗ  ᎪᏢᏅ]]
-[[India|ᎢᏅᏗᎾ]] ᎠᏛᎯᏍᏗ ᎠᎴ ᎤᏲᏨᎯ ᎤᏟ ᎢᎦᎢ ᎪᏢᏅ ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎠᏰᎵ ᎤᏙᏢᏒ, dedicating ᎾᎥᏂᎨᏍᏗ ᎠᏰᎵ ᎢᏴ Ꮝ ᎾᏕᏘᏴᎯᏒ ᎤᏅᏗ ᎠᏛᎯᏍᏙᏗ ᎠᏃᏢᏍᎬ ᎪᏢᏅ ᎠᎴ [[ghee]]. ᎭᏫᎾᏗᏢ 1997, ᎠᎹ ᎦᏄᎪᎬ ᎠᏛᎯᏍᏔᏅ 1,470,000&nbsp;[[tonne|ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎯᎸᏍᎩ ᎢᏯᏛᏂ]] ᎪᏢᏅ, ᎤᏦᎠᏎᏗ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎾᏍᎩ. ᏔᎵᏁ ᎭᏫᎾᏗᏢ ᎠᏛᎯᏍᏙᏗ ᏥᏄᏍᏛᎩ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ (522,000&nbsp;ᎯᎸᏍᎩ ᎢᏯᏛᏂ), ᎾᎯᏳᎢ [[France|ᎦᎸᏥᏱ]] (466,000), [[Germany|ᎠᏂᏛᏥ]] (442,000), ᎠᎴ [[New Zealand|ᎠᏤ Zealand]] (307,000). ᎭᏫᎾᏗᏢ ᏓᏓᎴᏂᏍᎬ ᎤᏲᏨᎯ, [[Germany|ᎠᏂᏛᏥ]] ᏥᏄᏍᏛᎩ ᏔᎵᏁ ᎤᎶᏐᏅ ᎠᎹ ᎦᏄᎪᎬ, ᎬᏗᏍᎬᎢ 578,000&nbsp;ᎯᎸᏍᎩ ᎢᏯᏛᏂ ᎪᏢᏅ ᎭᏫᎾᏗᏢ 1997, ᎠᏍᏓᏩᏛᏓ ᎾᎥᎢ [[France|ᎦᎸᏥᏱ]] (528,000), [[Russia|ᏲᏂᎢ]] (514,000), ᎠᎴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ (505,000). ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎤᏲᏨᎯ ᎯᎠ ᎤᎪᏗᏗ ᎤᎾᏤᎵ ᎪᏢᏅ domestically. ᎠᏤ Zealand, [[Australia|ᏒᎳᏗᏝ]], ᎠᎴ ᎯᎠ [[Ukraine]] ᎠᎴ ᏄᎾᏛᏅ ᎯᎠ ᎦᏲᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏒ Ꮎ ᏩᏗ ᏙᏱᏗᏢ ᎦᏛᎬᎢ ᏎᏍᏗ ᎯᎠ ᎪᏢᏅ ᎤᏅᏌ ᎠᏛᎯᏍᏙᏗ.<ref>ᎢᎦ ᏄᎵᏍᏔᏅᏒ ᏂᏛᎴᏅᏓ [[United States Department of Agriculture|USDA]] ᎢᏅ ᏕᎨᏒ ᏗᎦᎶᎪᏗ ᎤᎬᏩᎵ ᎾᏛᏁᎸ (1999).<ref>[http://www.fas.usda.gov/dlp2/circular/1999/99-07dairy/toc.htm Dairy: Word Markets and Trade]. Retrieved 1 ᎥᏍᎩᏱ 2005.</ref> ᎠᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎯᎠ ᏩᏗ ᏙᏱᏗᏢ ᎠᎴ ᎤᎾᏓᏟᏌᎲ ᏗᏎᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏠᏯᏍᏛ ᏗᏓᏁᏟᏴᎡᏗ ᎠᏰᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎭᏫᏂᏗᏢ ᎯᎠ [[European Union|European ᏗᏌᏊ ᎤᎾᎵᎪᎯ]], ᎠᎴ Ꮎ ᎾᎿᎢ ᎠᎴ inconsistencies ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎯᎠ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ clarified butterfat ᎤᎾᏛᎯᏍᏔᏅ (ᏓᏃᏏᏏᏍᎬ ᎦᏙᏃ ᎠᏤ Zealand ᎨᏒᎢ ᎤᎾᏓᏎᎮᎸᎩ ᏩᏗ ᏙᏱᏗᏢ ᎤᏟ ᎢᎦᎢ ᎪᏢᏅ ᎭᏫᎾᏗᏢ 1997 ᎬᎾᏬᏍᎬ ᏥᏄᏍᏛᎩ ᎠᏛᎯᏍᏔᏅ).</ref>
+<!-- [[File:DRFButter.jpg|thumb| ᏒᏙᏂ ᏗᎬᎩᎶᏍᏗ  ᎪᏢᏅ]] 404 -->
+[[India|ᎢᏅᏗᎾ]] ᎠᏛᎯᏍᏗ ᎠᎴ ᎤᏲᏨᎯ ᎤᏟ ᎢᎦᎢ ᎪᏢᏅ ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎠᏰᎵ ᎤᏙᏢᏒ, dedicating ᎾᎥᏂᎨᏍᏗ ᎠᏰᎵ ᎢᏴ Ꮝ ᎾᏕᏘᏴᎯᏒ ᎤᏅᏗ ᎠᏛᎯᏍᏙᏗ ᎠᏃᏢᏍᎬ ᎪᏢᏅ ᎠᎴ [[ghee]]. ᎭᏫᎾᏗᏢ 1997, ᎠᎹ ᎦᏄᎪᎬ ᎠᏛᎯᏍᏔᏅ 1,470,000&nbsp;[[tonne|ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎯᎸᏍᎩ ᎢᏯᏛᏂ]] ᎪᏢᏅ, ᎤᏦᎠᏎᏗ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎾᏍᎩ. ᏔᎵᏁ ᎭᏫᎾᏗᏢ ᎠᏛᎯᏍᏙᏗ ᏥᏄᏍᏛᎩ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ (522,000&nbsp;ᎯᎸᏍᎩ ᎢᏯᏛᏂ), ᎾᎯᏳᎢ [[France|ᎦᎸᏥᏱ]] (466,000), [[Germany|ᎠᏂᏛᏥ]] (442,000), ᎠᎴ [[New Zealand|ᎠᏤ Zealand]] (307,000). ᎭᏫᎾᏗᏢ ᏓᏓᎴᏂᏍᎬ ᎤᏲᏨᎯ, [[Germany|ᎠᏂᏛᏥ]] ᏥᏄᏍᏛᎩ ᏔᎵᏁ ᎤᎶᏐᏅ ᎠᎹ ᎦᏄᎪᎬ, ᎬᏗᏍᎬᎢ 578,000&nbsp;ᎯᎸᏍᎩ ᎢᏯᏛᏂ ᎪᏢᏅ ᎭᏫᎾᏗᏢ 1997, ᎠᏍᏓᏩᏛᏓ ᎾᎥᎢ [[France|ᎦᎸᏥᏱ]] (528,000), [[Russia|ᏲᏂᎢ]] (514,000), ᎠᎴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ (505,000). ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎤᏲᏨᎯ ᎯᎠ ᎤᎪᏗᏗ ᎤᎾᏤᎵ ᎪᏢᏅ domestically. ᎠᏤ Zealand, [[Australia|ᏒᎳᏗᏝ]], ᎠᎴ ᎯᎠ [[ᏳᎬᎳᎢᏅ]] ᎠᎴ ᏄᎾᏛᏅ ᎯᎠ ᎦᏲᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏒ Ꮎ ᏩᏗ ᏙᏱᏗᏢ ᎦᏛᎬᎢ ᏎᏍᏗ ᎯᎠ ᎪᏢᏅ ᎤᏅᏌ ᎠᏛᎯᏍᏙᏗ.ᎢᎦ ᏄᎵᏍᏔᏅᏒ ᏂᏛᎴᏅᏓ [[United States Department of Agriculture|USDA]] ᎢᏅ ᏕᎨᏒ ᏗᎦᎶᎪᏗ ᎤᎬᏩᎵ ᎾᏛᏁᎸ (1999).<ref>[http://www.fas.usda.gov/dlp2/circular/1999/99-07dairy/toc.htm Dairy: Word Markets and Trade]. Retrieved 1 ᎥᏍᎩᏱ 2005.</ref> ᎠᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎯᎠ ᏩᏗ ᏙᏱᏗᏢ ᎠᎴ ᎤᎾᏓᏟᏌᎲ ᏗᏎᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏠᏯᏍᏛ ᏗᏓᏁᏟᏴᎡᏗ ᎠᏰᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎭᏫᏂᏗᏢ ᎯᎠ [[European Union|European ᏗᏌᏊ ᎤᎾᎵᎪᎯ]], ᎠᎴ Ꮎ ᎾᎿᎢ ᎠᎴ inconsistencies ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎯᎠ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ clarified butterfat ᎤᎾᏛᎯᏍᏔᏅ (ᏓᏃᏏᏏᏍᎬ ᎦᏙᏃ ᎠᏤ Zealand ᎨᏒᎢ ᎤᎾᏓᏎᎮᎸᎩ ᏩᏗ ᏙᏱᏗᏢ ᎤᏟ ᎢᎦᎢ ᎪᏢᏅ ᎭᏫᎾᏗᏢ 1997 ᎬᎾᏬᏍᎬ ᏥᏄᏍᏛᎩ ᎠᏛᎯᏍᏔᏅ).
 
 ᏄᏓᎴᎿᎥ varieties ᎪᏢᏅ ᎠᎴ ᎠᏩᏛᏗ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ. ''[[Smen]]'' ᎨᏒᎢ spiced [[Morocco|Moroccan]] clarified ᎪᏢᏅ, ᎦᏂᏌᎲ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏙᎯ ᎠᎴ ᎤᎦᏳᎳᏨ ᎾᏍᎩᎾᎢ ᎢᏯᏅᏓ ᎠᎴ ᏧᏕᏘᏴᏓ. [[Yak]] ᎪᏢᏅ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᎭᏫᎾᏗᏢ [[Tibet]]; ''[[tsampa]]'', [[barley]] ᎢᏒ ᏩᏂᎨ ᎦᏟᏌᏅ ᎬᏙᏗ ᎦᏂᏝᎢ ᎪᏢᏅ, ᎨᏒᎢ ᏕᎬᏔᏛ ᎠᎵᏍᏓᏴᏗ. [[Butter tea|ᎪᏢᏅ ᎤᎦᎶᎬ]] ᎨᏒᎢ consumed ᎭᏫᎾᏗᏢ ᎯᎠ [[Himalaya]]n ᎤᏔᏂᏗ ᎦᏙᎯ Tibet, [[Bhutan]], [[Nepal]] ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ. ᎾᏍᎩ ᎤᎾᏠᏯᏍᏗ [[tea|ᎤᎦᎶᎬ]] ᎢᏯᏓᏛᏁᎸ ᎬᏙᏗ ᏂᎬᎢ ᏄᏍᏛ ᎠᎩᏍᏗ — ᎠᎴ "ᎤᏲᎢ"—ᎦᏂᏝᎢ ᎪᏢᏅ ᎠᎴ ᎠᎹ. ᎭᏫᎾᏗᏢ [[Africa]]n ᎠᎴ [[Asia]]n [[developing country|ᎠᏙᎷᏩᏘᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏒ]], ᎪᏢᏅ ᎨᏒᎢ ᎧᏃᎮᎸᎯ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᏧᎾᏦᏯᏍᏗ ᎤᏅᏗ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎠᎦᏓᏢᏓ. ᎾᏍᎩ ᏰᎵᏇ ᎠᎩᏍᏗ ᎯᎸᏍᎩ ᎢᏧᏟᎶᏛ ᎠᏑᏰᏗ ᎠᏛᎯᏍᏙᏗ workable ᎪᏢᏅ ᎤᏛᏒ ᎤᎦᏔ ᏂᏛᎴᏅᏓ fermented ᎤᏅᏗ.<ref>Crawford ''ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ'', ᎢᎦᏛ B, ᎾᎿ ᎨᏒ ᎪᎷᏩᏛᏗ, ch. 1: [http://www.fao.org/docrep/003/t0251e/T0251E15.htm#ch1 Butter]. Retrieved 28 ᏅᏓᏕᏆ 2005.</ref>
 
